Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -19,7 +19,7 @@
  emp_bav_conquer_tirol_desc:0 "チロル伯国はかつてバイエルン公国に属しており、我々はその地の請求を1369年に中断したに過ぎない。この請求を再開し、ハプスブルク家によるこの地域の侵略を終わらせなければならない。"
  emp_bav_union_with_austria_title:0 "オーストリアとの連合"
  emp_bav_union_with_austria_desc:0 "成り上がり者のハプスブルク家は、かつてバイエルン公国が属していたオーストリアに広大な領邦帝国を築き上げている。それは何世紀も前の話とはいえ、バイエルン人の多くはオーストリアの陰で生きることに決して満足しておらず、喜んで形勢逆転の機会をつかみ取るだろうし、その機会を作らねばならない。"
- emp_bav_italian_sun_title:0 "イタリアへの拡大"
+ emp_bav_italian_sun_title:0 "イタリアへの拡張"
  emp_bav_italian_sun_desc:0 "古くからバイエルンの民は、アドリア海沿岸の爽やかな潮風に大きな憧れを抱いてきた。今我が国は[Root.GovernmentName]の為にそのような領土を獲得できる立場にある。ヴェネツィアとカルニオラを我らが手に収めねばなるまい！"
  emp_bav_oktoberfest_mission_title:0 "オクトーバーフェストの開始"
  emp_bav_oktoberfest_mission_desc:0 "我が国の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行なうなら、我々の威信と名声は間違いなく誰にも劣らぬものとなるだろう。"
@@ -1119,7 +1119,7 @@
  emp_ita_the_gallic_wars_tt:1 "§Yフランス§!地方において§Y50§!以上の州を自国または従属国（非朝貢国）が領有している"
  emp_ita_redeem_tirolo_tt:1 "§Yチロル§!地域の4州を領有する"
  emp_ven_aldine_monopoly_title:0 "アルドの独占"
- emp_ven_aldine_monopoly_desc:0 "The printing press has brought many new innovations to Venice, including the introduction of a slanted, cursive font named after the region it came from, 'Italics', and an early form of copyright protection via granting a monopoly in the production of works written in Greek. These printing innovations are sure to help spread new ideas throughout the Serene Republic."
+ emp_ven_aldine_monopoly_desc:0 "印刷機はヴェネツィアに多くの新しい革新をもたらしており、それには、それが由来する地域にちなんで名付けられた傾斜した筆記体フォントである「イタリック体」、及びギリシャ語で書かれた作品の制作に独占権を与える初期の著作権保護が含まれている。これらの印刷の革新は、高貴なる共和国全体で新しいアイデアを生み出すのに役立つだろう。"
  emp_ven_plague_doctor_training_title:0 "ペスト医の訓練"
  emp_ven_plague_doctor_training_desc:0 "ペスト医は、大部分が素人である。専門家の医師や外科医は最も裕福な時期を過ごす傾向があるのに対し、二流のペスト医は土地を歩き回り、最良の治療を行うことができない人々を追う傾向がある。彼らの質には大きな差があるが、ペスト医に標準的な知識基盤を提供する育成計画を導入した場合、地方の人々の健康は劇的に向上するだろう。"
  emp_ven_plague_doctor_training_tt:0 "§Y[Root.GetName]§!の市民がペストのイベントに襲われる可能性は低くなります。"
@@ -1444,7 +1444,7 @@
  emp_fra_integrate_vassals_desc:0 "自身の自治領を統治する封建的な家臣の時代はもはや終わらなければならない。我々は土地を持つ貴族たちを抑え、[Root.GetName]を単一の国家へと統合する必要がある。"
  emp_fra_wars_of_religion_title:0 "ドラゴナードの制定"
  emp_fra_wars_of_religion_desc:0 "我々はプロテスタントの改革によってもたらされた最悪の問題にずっと耐えてきたが、[Root.GetName]には潜在的に反逆的な異端者が数多く存在している。我々はこれらの異端者を国家から追放するため、これらの異端者に対する威圧的で差別的な方針を制定すべきである。"
- emp_fra_establish_the_musketeers_title:0 "マスケット銃士兵隊の設立"
+ emp_fra_establish_the_musketeers_title:0 "マスケット銃士隊の設立"
  emp_fra_establish_the_musketeers_desc:0 "我々は君主を守り、メゾン・デュ・ロウの軍事力として行動するための精鋭の兵士の軍団を設立すべきだ。その加入資格が上流階級のために確保されていることで、これらの連隊は貴族が軍での経歴を求めることを奨励する。"
  emp_fra_i_am_the_state_title:0 "朕は国家なり"
  emp_fra_i_am_the_state_desc:1 "君主たる者、伝統、地方の特権、貴族によって制限されるべきではない。代わりに、国家という船の唯一の指揮官でなければならない。"
@@ -1847,7 +1847,7 @@
  emp_ger_hlr_burn_the_wooden_wall_title:0 "木の城壁を燃やせ"
  emp_ger_hlr_burn_the_wooden_wall_desc:0 "ブリテン諸島のロイヤル・ネイビーの存在によって、イギリス人は世界中で、そして最も重要なドイツにおいても、力を誇示できる。やつらの干渉に終止符を打ち、やつらの木の城壁を灰塵に帰し、海の底に眠らせてやれ！"
  burn_wooden_wall_tt:0 "§Y5§!隻以上の大型船を持つ§Yイギリス諸島§!に首都がある国家がない。"
- ger_rhineland_tt:0 "§Yノルトライン§!、§Y下ラインラント§!、§Yプファルツ§!地域内で工場を持つ領有州はすべて、ゲーム終了まで§Yラインラントの工業化§!を獲得し、以下の効果を得ます：\n州の交易品生産補正 §G+15.0%§!"
+ ger_rhineland_tt:0 "§Yノルトライン§!、§Y下ラインラント§!、§Yプファルツ§!地域内で工場を持つ領有州はすべて、§Yラインラントの工業化§!をゲーム終了まで獲得し、以下の効果を得ます：\n州の交易品生産補正 §G+15.0%§!"
  dominant_economy_tt:0 "他のどのヨーロッパの国家よりも毎月の収入が多い"
  germany_ned_tt:0 "§Yオランダ§!が§Y低地諸国§!地方の州を領有していない"
  ger_chancellor_tt:0 "スキル§Y3§!以上の顧問を§Y3§!人雇用する。"
@@ -2050,8 +2050,8 @@
  ned_je_maintiendrai_mod:0 "我、守り続けん"
  desc_ned_je_maintiendrai_mod:0 "我が国の業績は比類のないものであり、我々の栄光に限界はない。我々の偉大さは、我々の国民と世界の権力によって認められている。"
  emp_pap_patrimony_of_st_peter_tt:0 "§Yマルケ＝アブルッツォ§!または§Yエミリア＝ロマーニャ§!地域の§Y6§!州が自国または従属国（非朝貢国）によって領有されている。"
- emp_pap_mission_to_china_noncatholic_tt:0 "カトリック国家に領有されている§Y中国§!の州（それ自身がカトリックの場合を除く）はすべて、§Y20年§!間、補正§Yイエズス会の中国での伝道§!を獲得し、以下の効果を得ます：\n州の宣教師維持費：§G-25.0%§!\n州の布教強度：§G+3.0%§!\n州の不穏度：§G-3§!\n"
- emp_pap_mission_to_china_catholic_tt:0 "カトリック国家に領有されている§Y中国§!の州（それ自身がカトリックの場合も含む）はすべて、§Y20年§!間、補正§Y中国のイエズス会の拠点§!を獲得し、以下の効果を得ます：\n州の布教強度：§R-5.0%§!\n州の開発コスト：§G-10.0%§!\n"
+ emp_pap_mission_to_china_noncatholic_tt:0 "カトリック国家に領有されている§Y中国§!の州（それ自身がカトリックの場合を除く）はすべて、補正§Yイエズス会の中国での伝道§!を§Y20年間§!獲得し、以下の効果を得ます：\n州の宣教師維持費：§G-25.0%§!\n州の布教強度：§G+3.0%§!\n州の不穏度：§G-3§!\n"
+ emp_pap_mission_to_china_catholic_tt:0 "カトリック国家に領有されている§Y中国§!の州（それ自身がカトリックの場合も含む）はすべて、補正§Y中国のイエズス会の拠点§!を§Y20年間§!獲得し、以下の効果を得ます：\n州の布教強度：§R-5.0%§!\n州の開発コスト：§G-10.0%§!\n"
  emp_pap_back_the_catholic_powers_league_tt:0 "§Yカトリック連盟§!の全国家は§Y10§!年間、補正§Y教皇の軍事援助§!を獲得し、各国家には以下の効果が与えられます：\n傭兵維持費：§G-25.0%§!\n傭兵コスト：§G-10.0%§!"
  fla_belgium_nostrum:0 "我らがベルギー"
  desc_fla_belgium_nostrum:0 "我々の中核地域には多くの異なる人々が暮らしているが、我々はそれでもまだ、カエサルの時代の勇敢なるベルガエ族とベルギーの共通の地理、共通の国家的起源といったことに共通点を見出すことができる。"
@@ -2148,7 +2148,7 @@
  han_unite_the_welfs_desc:0 "ヴェルフ家の領土は分割されている。我々がブラウンシュヴァイク、リューネブルク、ハノーファーを統合できれば、ドイツで最も影響力のある王朝の1つとしての地位が確保されるだろう。"
  han_defend_against_neighbors_title:0 "ザクセンに対する防衛"
  han_defend_against_neighbors_desc:0 "東のザクセン人及びブランデンブルク人は、バレないようにしているつもりだろうが自領を貪欲に凝視している。必ずや、自軍がハゲタカを遠ざけるのに十分な抑止力とせねばならない…そしておそらく、自分自身の野望を受け入れられるようにもせねばならない。"
- han_expand_into_saxony_title:0 "ザクセンへの拡大"
+ han_expand_into_saxony_title:0 "ザクセンへの拡張"
  han_expand_into_saxony_desc:0 "この国はオーバーザクセンとニーダーザクセンに分割されている。もしオーバーザクセンが統一されることになれば、彼らはおそらく我々に挑戦するほど強大になるだろう。そのため、我々は自らの旗のもとでこの古えの種族をザクセン公国に再統一するために、それらの分断された諸国を利用しなければならない。"
  han_subdue_brandenburg_title:0 "ブランデンブルクの征服"
  han_subdue_brandenburg_desc:0 "ブランデンブルクのホーエンツォルレルン家の者たちは、北ドイツに君臨するという傲慢な野望を抱いている。我々は先に奴らを支配下において、その野望が無に帰すよう計らわねばならない。"
@@ -2457,4 +2457,4 @@
  peasants_means_of_production_tt:0 "の領有州に製造所、織物工場、武器工場、海軍機器工場または溶鉱炉がある。"
  desc_pap_papal_swiss_guard:0 "特別な契約により、お金で買える最高の兵士を徴用できる。"
  knights_missions.3.b:0 "神がそれを望まれる！"
- CALL_COALITION_ALLY:1 "$COUNTRY|Y$ is in a coalition against $ALLY$. If called co-belligerant all the members of the coalition will be called in the war."
+ CALL_COALITION_ALLY:1 "$COUNTRY|Y$は$ALLY$に対する包囲網の一員です。共戦国が参戦要請されると全ての包囲網参加国が参戦を要請されます。"
