--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -61,9 +61,9 @@
  SET_POPE_DESC:0 "$COUNTRYNAME$ will become the Papal Controller."
  EFFECT_REMOVE_POWER_PROJECTION:0 "$TAG$ will lose $AMOUNT|R$ Power Projection."
  NO_CLAIM_COST_INCREASE:0 "Cost for additional claims is ignored due to our modifiers."
- MODIFIER_NO_CLAIM_COST_INCREASEMENT:0 "No additional claim cost"
- MODIFIER_NAVAL_MORALE_DAMAGE:0 "Naval Morale Damage"
- MODIFIER_NAVAL_MORALE_DAMAGE_RECEIVED:0 "Naval Morale Damage Received"
+ MODIFIER_NO_CLAIM_COST_INCREASEMENT:0 "追加請求コストなし"
+ MODIFIER_NAVAL_MORALE_DAMAGE:0 "海軍士気ダメージ"
+ MODIFIER_NAVAL_MORALE_DAMAGE_RECEIVED:0 "海軍被士気ダメージ"
  average_global_autonomy:0 "Average Autonomy"
  reverse_average_global_autonomy:0 "Reverse Average Autonomy"
  average_overseas_subject_liberty_desire:0 "Average Liberty Desire from Oversea Subjects"
@@ -72,24 +72,24 @@
  reverse_average_subject_liberty_desire:0 "Reverse Average Liberty Desire"
  average_oversea_liberty_desire:0 "Average Overseas Liberty Desire"
  reverse_average_oversea_liberty_desire:1 "Reverse Average Overseas Liberty Desire"
- MODIFIER_HAS_TERCIO:0 "Country Allows Tercio Infantry"
- MODIFIER_HAS_MUSKETEER:0 "Country Allows Musketeer Infantry"
+ MODIFIER_HAS_TERCIO:0 "テルシオ歩兵が国内で利用可能になる"
+ MODIFIER_HAS_MUSKETEER:0 "銃士歩兵が国内で利用可能になる"
  MODIFIER_HAS_SAMURAI:0 "侍歩兵が国内で利用可能になる"
  MODIFIER_HAS_GEOBUKSEON:0 "亀甲船が国内で利用可能になる"
- MODIFIER_HAS_MAN_OF_WAR:0 "Country Allows Man Of War Ships"
- MODIFIER_HAS_GALLEON:0 "Country Allows Galleon Ships"
- MODIFIER_HAS_GALLEASSE:0 "Country Allows Galleass Ships"
- MODIFIER_HAS_CARAVEL:0 "Country Allows Caravel Ships"
- MODIFIER_HAS_VOC_INDIAMEN:0 "Country Allows VOC Indiamen Ships"
+ MODIFIER_HAS_MAN_OF_WAR:0 "軍艦が国内で利用可能になる"
+ MODIFIER_HAS_GALLEON:0 "ガレオンが国内で利用可能になる"
+ MODIFIER_HAS_GALLEASSE:0 "ガレアスが国内で利用可能になる"
+ MODIFIER_HAS_CARAVEL:0 "キャラベルが国内で利用可能になる"
+ MODIFIER_HAS_VOC_INDIAMEN:0 "VOCインディアマンが国内で利用可能になる"
  automatic_seat_in_parliament_abs_impact:0 "Automatic Assignment of a Parliament Seat: $VAL$ per $SCALE$ development.\n"
  manual_seat_in_parliament_abs_impact:0 "Manual Assignment of a Parliament Seat: $VAL$ per $SCALE$ development.\n"
  CAN_NOT_REDUCE_INFLATION_TT:0 "We can't reduce inflation!"
- MODIFIER_MAY_NOT_REDUCE_INFLATION:0 "Can NOT reduce inflation"
- MODIFIER_MAY_NOT_CONVERT_TERRITORIES:0 "Can NOT convert provinces in territories"
- MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV_PENALTY:0 "§R$VALUE|=0$ Combat Penalty§!"
- MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV_BONUS:0 "§G$VALUE|=0$ Combat Bonus§!"
+ MODIFIER_MAY_NOT_REDUCE_INFLATION:0 "インフレを削減不可能"
+ MODIFIER_MAY_NOT_CONVERT_TERRITORIES:0 "テリトリーでの改宗不可能"
+ MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV_PENALTY:0 "§R$VALUE|=0$ 戦闘ペナルティ§!"
+ MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV_BONUS:0 "§G$VALUE|=0$ 戦闘ボーナス§!"
  can_celebrate_festival:0 "§YYou can celebrate a festival!§!"
- MODIFIER_NO_COST_FOR_REINFORCING:0 "No cost for reinforcing"
+ MODIFIER_NO_COST_FOR_REINFORCING:0 "補充コストなし"
  LOOT_RECOVERY_DATE_AFTER:0 "This province was last looted on $LAST_LOOT_DATE|Y$. It's recovering by §G$PERCENTAGE$%§! monthly, unless it is looted again."
  holy_order_short:0 "Order"
  holy_order_full:0 "Holy Order"
@@ -117,11 +117,11 @@
  total_land_units_lost:0 "失った全陸上ユニット"
  total_naval_units_killed:0 "殺された全海上ユニット"
  total_naval_units_lost:0 "失った全海上ユニット"
- MODIFIER_HAS_STRELTSY:0 "Country Allows Streltsy Infantry"
+ MODIFIER_HAS_STRELTSY:0 "ストレリツィ歩兵が国内で利用可能になる"
  MODIFIER_ALLOWED_STRELTSY_FRACTION:0 "Streltsy Force Limit Fraction"
- MODIFIER_AMOUNT_OF_STRELTSY:0 "Streltsy Force Limit"
- MODIFIER_LOCAL_HAS_STRELTSY:0 "Province Allows Streltsy Infantry"
- STRELTSY_LIMIT_CULTURE:0 "$PROVINCE$ is a $CULTURE$ province, so can not recruit Streltsy Infantry here."
+ MODIFIER_AMOUNT_OF_STRELTSY:0 "ストレリツィ扶養限界"
+ MODIFIER_LOCAL_HAS_STRELTSY:0 "ストレリツィ歩兵が州内で利用可能になる"
+ STRELTSY_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、カロリアン歩兵を募集できません。"
  STRELTSY_FORCELIMIT:0 "We can recruit up to $VAL|%Y$ of our force-limit of $FL$ as §GStreltsy§! due to:\n"
  TRIG_STATE_NOT_PROSP_NONAME:0 "Is NOT prosperous."
  TRIG_STATE_PROSP_NONAME:0 "Is prosperous."
