--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1696,7 +1696,7 @@
  custom_reserves_organisation:0 "冷徹な能率性"
  custom_reserves_organisation_desc:0 "わが軍の兵士は訓練中に多くの精神的、肉体的苦痛を経験しているため、戦友の死は彼らにとって無意味なものとなっている。"
  custom_global_supply_limit_modifier:0 "兵站の中心"
- custom_global_supply_limit_modifier_desc:0 "説明できないような出来事の連続で、自国の将官たちは、この時代には類を見ないほどの兵站計画を手に入れることができた。どうやってこの計画を手に入れたかは、もはや知る由もないが、この計画は自国の部隊編成時に重宝することだろう。"
+ custom_global_supply_limit_modifier_desc:0 "説明できないような出来事の連続で、自国の将官たちは、この時代には類を見ないほどの兵站計画を手に入れることができた。どうやってこの計画を手に入れたかは、もはや知る由もないが、この計画は自国の部隊編制時に重宝することだろう。"
  custom_general_cost:0 "軍の階級拡大"
  custom_general_cost_desc:0 "将校の数を増やせば、国家のために大将軍として活躍できる有能な人材をより多く確保できることだろう。"
  custom_raze_power_gain:0 "襲撃と略奪"
@@ -1726,7 +1726,7 @@
  chan_chan_citadel:0 "チャン・チャン砦"
  doges_palace:0 "ドゥカーレ宮殿"
  duomo_milano:0 "ミラノのドゥオーモ"
- dutch_polders:0 "オランダの干拓地"
+ dutch_polders:0 "オランダ干拓地"
  ellora_caves:0 "エローラ石窟群"
  erdene_zuu:0 "エルデネ・ゾー"
  etchimiadzin_cathedral:0 "エチミアジン大聖堂"
