--- a/source/localisation/mughal_government_l_english.yml
+++ b/source/localisation/mughal_government_l_english.yml
@@ -30,7 +30,7 @@
  mughal_government_african_assimilated:0 "スワヒリの富"
  mughal_government_african_assimilated_desc:0 "東バントゥー人の住むアフリカ東海岸は富であふれている。すでに開発され、価値ある資源を採掘するのが容易となるであろう、現地民の鉱山に感謝しなければならない。"
  mughal_government_east_slavic_assimilated:0 "大量徴兵"
- mughal_government_east_slavic_assimilated_desc:0 "東スラヴ人は他国家よりも相対的に多くの軍隊を編成することができる。彼らは、我々が躊躇してきた方法である大規模徴兵と、下級階層の武装によって数を用意している。もしかすると、この方法にも利点があるのかもしれない。"
+ mughal_government_east_slavic_assimilated_desc:0 "東スラヴ人は他国家よりも相対的に多くの軍隊を編制することができる。彼らは、我々が躊躇してきた方法である大規模徴兵と、下級階層の武装によって数を用意している。もしかすると、この方法にも利点があるのかもしれない。"
  mughal_government_eastern_aryan_assimilated:0 "東インドの織物生産"
  mughal_government_eastern_aryan_assimilated_desc:0 "絹、綿、布は東インド経済を支えている。これらの製品を頼みにしているためこの地域は新しい生産技術の革新の中心であり、我々は躊躇なくこの技術を採用できる。"
  mughal_government_evenks_assimilated:0 "満州騎兵戦術"
