--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -75,7 +75,7 @@
  desc_the_foreign_support_act:0 "時には敵を倒す最善の方法は、彼らの国民を彼ら自身に向けることである。高価だがしかし安全だ。"
  the_colonial_supervision_act:0 "植民地監督法"
  desc_the_colonial_supervision_act:0 "我々の過去の総督たちは悪名高く腐敗していた。我々はもうこのようなことを容認しない。"
- naval_civilian_neutrality_act:0 "民間海運の中立性に関する法律"
+ naval_civilian_neutrality_act:0 "民間海運中立法"
  desc_naval_civilian_neutrality_act:0 "我々の諜報員は、密輸業者や封鎖の違反者に対処するための重要な情報を提供することができる。"
  deserteur_act:0 "脱走兵に関する法律"
  desc_deserteur_act:0 "我々は過去、脱走兵に対してあまりにも寛容であった。今、我々の調査官は臆病者が当然の運命を被ることを確認する。"
@@ -88,14 +88,14 @@
  naval_secrecy_act:0 "海軍の秘密事項に関する法律"
  desc_naval_secrecy_act:0 "我々はこの奇妙な新世界の多くを見てきた。我々の敵が確実に知りたがる情報である。今後、すべての海軍に関する事項は秘密情報とみなされる。"
  local_army_organisation:0 "現地軍の組織"
- desc_local_army_organisation:0 "我々は軍隊を再編成して、必要に応じ、いつでも効率的に戦うことができるようにする。"
+ desc_local_army_organisation:0 "我々は軍隊を再編して、必要に応じ、いつでも効率的に戦うことができるようにする。"
  streamlined_galley_production:0 "ガレー船生産の合理化"
  desc_streamlined_galley_production:0 "我々の造船工たちは、我々の海軍のためのガレー船の生産について、効率面で多くのことが達成できることを教えてくれる。合理化し、生産工程を標準化し、造船所が決して供給不足とならないことを確実にすることにより、我々は偉大な海軍としての我が国の確かな基盤を築くだろう。"
- public_welfare_act:0 "公共の福祉に関する法律"
+ public_welfare_act:0 "公共福祉法"
  desc_public_welfare_act:0 "困難な時代には、貧困層が最も苦しむのが常である。いくつかの小さな寄付は、彼らの悲惨さを和らげるのに役立つ。そして、暴徒たちが松明や熊手を手にとることがないようにする。"
  the_spy_discovery_act:0 "諜報員発見に関する法律"
  desc_the_spy_discovery_act:0 "我々の支配は、常に敵の諜報員にとって主要な目標となる。しかし、彼らの人生をもっと困難にするために、いくつかできることがある。"
- les_invalides_act:0 "傷兵保護院に関する法律"
+ les_invalides_act:0 "廃兵院法"
  desc_les_invalides_act:0 "我が軍の熟年の兵士たちは、我々によく仕えてくれた。今は、軍隊での仕事の終わりに、彼らが価値ある人生を送ることができるようにすることが我々の義務だ。"
  enforce_religious_law:0 "宗教法の施行"
  desc_enforce_religious_law:1 "我々の社会に対する犯罪と刑罰とを区別するために、我々の聖なる教典にもっと詳しく触れてみよう。社会が真に敬虔な方法で支配されている場合、それは敬虔な者にとって売国奴や逸脱した者を見分けやすくするだろう。"
@@ -103,7 +103,7 @@
  desc_cloth_quality_edict:0 "市場で提供される布の品質を向上させるため、商人によって提供される布が三つの別々の機会に満足のいく品質であると判明しない場合、そのような商人は、その布と共に罰として柱に縛られなければならない。"
  policy_of_calculate_delay:0 "計画的遅延政策"
  desc_policy_of_calculate_delay:0 "安全と寛容の約束と保証をもって、我々は平和で武装していないままであることを我々の領土内の不信者に納得させることができる。これは、少なくとも宗教内戦の脅威を、我々が彼らの邪悪に対処して真の信仰に戻すことができるようになるまで一時的に延ばすだろう。"
- production_quota_act:0 "生産枠に関する法律"
+ production_quota_act:0 "生産割当法"
  desc_production_quota_act:0 "高い生産枠を設定して実施することで、より多くの商品を生産することによって簡単に多くの収入を得ることができる。"
  encouragement_of_merchant_navy:0 "商船隊の奨励"
  desc_encouragement_of_merchant_navy:0 "民間の商船の拡大を奨励することで、我々は世界中で交易の影響力を高めることができる。"
@@ -115,11 +115,11 @@
  desc_the_tolerance_act:0 "我々の社会の中で様々な宗教団体を支援し、市民に単一の宗教を強制しないことが重要だ。"
  commercial_embassies:0 "商業的な大使"
  desc_commercial_embassies:0 "我々の大使は、特使としての役割を果たすだけでなく、我々の交易を保護し、促進することも任せられるべきだ。彼らは、過去のすべての契約が外国の宮廷で延長され、尊重され続けていることを見るべきであり、その努力を妨害するための競争相手の諜報行為を避けるべきではない。"
- naval_exploration_act:0 "海軍の探検に関する法律"
+ naval_exploration_act:0 "海洋探検法"
  desc_naval_exploration_act:0 "未知の海の探査のために我々の船を再編することは、彼らが我々の海岸からより遠くに冒険することを可能にする。"
  active_foreign_recruitment_act:0 "外国人採用法"
  desc_active_foreign_recruitment_act:0 "我々の国家は、我々の目的のために戦う傭兵に支払うことで、より有能な人を引き付けることで知られるべきである。"
- sapper_regiments_act:0 "工兵に関する法律"
+ sapper_regiments_act:0 "工兵法"
  desc_sapper_regiments_act:0 "歩兵のすべての連隊に、要塞を構築する必要がある時のために工兵部隊を保持することを定めた軍事規定である。"
  vassal_taxation_policy:0 "属国課税政策"
  desc_vassal_taxation_policy:0 "対象国の課税においてより積極的な立場を確保することにより、我々の財源への金のより良い流れにつながる。"
@@ -155,7 +155,7 @@
  desc_protected_shipping_lanes:0 "世界中の交易商品を運ぶ我々の船は、風や海の性質によって確立された航路を取って利益を得る。これらの航路を確保することで、安全かつ効率的な交易を保証できる。"
  church_sponsored_guilds:0 "宗教的にギルドを後援"
  desc_church_sponsored_guilds:0 "職人気質は、宗教指導者にそのような仕事を支援する理由を与え、霊的なことを祝うための多くの機会を与える。我々は、世俗の創造において神の現れを助ける。"
- record_keeping_act:0 "記録の保存に関する法律"
+ record_keeping_act:0 "記録保存法"
  desc_record_keeping_act:1 "外交官に対し、仲間の国家公務員のためにすべての単独契約の記録を残すように要求する法律により、我々は努力をより効率的に行うことができる。"
  military_allotment_act:0 "軍事割当法"
  desc_military_allotment_act:0 "地方の軍隊に資源を配分することで、傭兵への依存度を高めることなく、戦争に備えて十分な人員を維持することができる。"
@@ -171,7 +171,7 @@
  desc_field_priests:0 "我々は兵士たちが熱意を抱き、聖なる目的のために、自身を犠牲にすることを厭わないよう努力するようにしなければならない。常に我々は、戦場にいる兵士たちの精神的な健康を守り、礼拝を導き、命が終わったときに世話をする司祭が大勢いることを保証する必要がある。我々はまた、作戦中に彼らが望む可能性のある祈祷書や他の宗教的資料の不足がないことを確実にしなければならない。"
  currency_council:0 "通貨に関する評議会"
  desc_currency_council:0 "我々の鋳造を監督する通貨委員会を確立することにより、我々は通貨の不要な変造を防ぐことができる。"
- policy_religious_freedom_act:0 "宗教自由法"
+ policy_religious_freedom_act:0 "信教自由法"
  desc_policy_religious_freedom_act:0 "彼らが正しいと感じた神々をどれでも崇拝できるよう、すべての国民に良心の自由を与える。"
  the_redemption_act:0 "救済法"
  desc_the_redemption_act:0 "共通の信仰への回帰と引き換えに、異端犯罪に対する恩赦を与えることによって、我々の誤った国民たちに魂を救うよう奨励する。"
@@ -181,27 +181,27 @@
  desc_mission_of_civilize:0 "我々の聖なる使命は、世界の暗い隅に文明のトーチを運び、そこに住む迷える魂を救うことである。"
  exchange_of_ideas:0 "アイデアの交換"
  desc_exchange_of_ideas:0 "外国のアイデアや風習の我々の文化への取り込みを積極的に促すことにより、将来的な新しいアイデアの実現を容易にすることができる。"
- vassal_obligations_act:0 "属国の義務に関する法律"
+ vassal_obligations_act:0 "属国義務法"
  desc_vassal_obligations_act:0 "衛星国が我々に対して持っている正確な軍事的および経済的義務を法律で修正する。"
  foreign_advisors:0 "外国の顧問"
  desc_foreign_advisors:0 "我々の宮廷をあらゆる国籍の人々に開放することにより、我々は自分たちのコストを最小限に抑え、海外で貴重な外交関係を構築できるように最善の助言を得ることができる。"
- vassal_integration_act:0 "属国の統合に関する法律"
+ vassal_integration_act:0 "属国統合法"
  desc_vassal_integration_act:2 "我が国に外国の領土を組み込むことは、困難で時間のかかる仕事である。統合のための一連の標準的な慣行を設定することにより、それを容易にすることができる。"
  overseas_dominions:0 "海外の自治領"
  desc_overseas_dominions:0 "遠い土地を支配するのは難しい。特に土地が海の向こうであるときはさらに。王家に忠実な地方の総督による支配権を確立することによって、我々はそれらの土地を最大限に活用することができる。"
  enlightened_aristocracy:0 "啓蒙された貴族"
  desc_enlightened_aristocracy:0 "我々の国家を率いる人たちが我々の人道主義にとって最も近い信者であることを保証するために、貴族の間の教育と高い文学的基準を奨励する。"
- the_liberation_act:0 "解放に関する法律"
+ the_liberation_act:0 "解放法"
  desc_the_liberation_act:0 "外国の専制政治の被害者たちを解放し、啓蒙主義の特権を享受できるようにするという我々の意思を表明する。"
  visionary_thinkers:0 "先見性のある思想家"
  desc_visionary_thinkers:0 "我が国は知的思想の要塞であり、私たちの大学は世界で最も明るく、最も先見性のある思想家を生み出している。"
- the_transportation_act:0 "運賃に関する法律"
+ the_transportation_act:0 "運賃法"
  desc_the_transportation_act:0 "貴重品の輸出を促進するために、物品の運送料を固定する制度を確立する。"
  harbour_administration:0 "港の管理"
  desc_harbour_administration:0 "我々の港の管理と保守を行うための国家機関を設立する。"
  supply_convoys:0 "護送船団"
  desc_supply_convoys:0 "我々の海外の持ち株会社が祖国からの供給品に定期的にアクセスできるようにする。"
- cultural_recognition_act:0 "文化の認定に関する法律"
+ cultural_recognition_act:0 "文化認定法"
  desc_cultural_recognition_act:0 "我々の少数民族の文化の独自性と貴重な貢献とを認識することによって、我々は彼らがもっと国家と一体感を感じるようにすることができる。"
  multilingual_diplomats:0 "多言語を話す外交官"
  desc_multilingual_diplomats:0 "我々の外交官は、我々と他の文化との理解を促進するために、外国の宮廷の言語で教育されていることを保証する。"
@@ -269,7 +269,7 @@
  desc_guerilla_warfare:0 "地元住民たちは、外国の侵略に対して抵抗できるよう、武器や物資の隠し場所を作っている。"
  merchant_marine_act:0 "商船法"
  desc_merchant_marine_act:0 "紛争の時に軍艦に転用できる大規模な交易艦隊を確保するために、船舶および商社に国家支援を与える。"
- pen_rely_on_sword_act:0 "ペンは剣の行動に依存する"
+ pen_rely_on_sword_act:0 "「ペンは剣に依存する」法"
  desc_pen_rely_on_sword_act:0 "行動の力も言葉の力もないため、我が国は、偉大な大使と演説者と軍隊にそれらの主張を裏付けるよう求めている。"
  taxation_with_representation:0 "課税と代表"
  desc_taxation_with_representation:2 "我々の植民地を我が政府において代表することができるようにすれば、我々に国家へ忠実な市民のより大きなプールを提供するだろう。"
@@ -305,15 +305,15 @@
  desc_the_liquor_act:0 "規制と免許料が、ジンの販売に関して導入されている。"
  the_joint_stock_companies_act:0 "合本会社法"
  desc_the_joint_stock_companies_act:0 "今後は王室の許可なく合本会社を形成することは禁止される。"
- the_merchant_shipping_act:0 "商船法"
+ the_merchant_shipping_act:0 "商船海運法"
  desc_the_merchant_shipping_act:0 "強盗による物品の損傷または紛失に関する船主の責任には限度が設けられる。"
  the_witchcraft_act:0 "魔術法"
  desc_the_witchcraft_act:0 "いかなる形式の魔術、魔法、または魔法を使う慣習は、コモン・ローにおいて重罪とみなされる。"
  the_education_act:0 "教育法"
  desc_the_education_act:0 "今後の教育は、我々の法制度を支配する者にとっては義務である。"
- the_abolish_slavery_act:0 "奴隷法の廃止"
+ the_abolish_slavery_act:0 "奴隷廃止法"
  desc_the_abolish_slavery_act:0 "奴隷貿易と奴隷制は、今後我が国全土で禁止される。"
- the_judiciary_act:0 "司法制度法案"
+ the_judiciary_act:0 "司法制度法"
  desc_the_judiciary_act:0 "法律の運用と解釈を担当する国家裁判所制度が設立された。"
  the_statute_of_monopolies:0 "独占に関する法律"
  desc_the_statute_of_monopolies:0 "交易国間の自由な交易と商品の自由な流通を促進することで、我々は生産と交易、両方の効率を高めている。"
@@ -321,7 +321,7 @@
  desc_the_recruiting_act:0 "収入の手段を持たない健常者を海軍の奉仕に参加させることは、間違いなくいくつかの論争を引き起こすであろう。"
  the_military_act:0 "民兵法"
  desc_the_military_act:0 "民兵の独占的な権利として、指揮権からその処分まで、すべての権利は王の手にあると考えられている。"
- the_tenures_abolition_act:0 "不動産保有条件廃止に関する法律"
+ the_tenures_abolition_act:0 "不動産保有条件廃止法"
  desc_the_tenures_abolition_act:0 "君主に一定の補償を設定し、王家に負う様々な軍事的および農業的義務が取り除かれた。"
  the_dissolution_act:0 "解散法"
  desc_the_dissolution_act:0 "すべての措置は、議会の同意なしに王による国家の絶対的支配を防ぐために取られている。"
@@ -341,7 +341,7 @@
  desc_public_road_act:0 "我々の軍隊を年に一度まるまる一週間、インフラを維持する事に捧げよう。"
  the_colonial_nobility_act:0 "植民地貴族法"
  desc_the_colonial_nobility_act:0 "植民地に貴族を作り、地元住民を圧政で支配する力を提供する事によって、国軍の人的資源のための大きな基盤を確立する。"
- the_loyalty_act:0 "忠誠に関する法律"
+ the_loyalty_act:0 "忠誠法"
  desc_the_loyalty_act:0 "我々の領土の危険分子を暴いた忠実な市民には国から十分な報酬があるだろう。"
  edict_of_resistance:0 "抵抗運動への布告"
  desc_edict_of_resistance:0 "聖職者を通して、戦争で支持された国家としての国家の考えを促進し、この地球における我が権利に対する信仰を失うことは決してない。死ぬまで戦う事は、我が民族の精神である。"
