--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -120,7 +120,7 @@
  anglican_religion_desc:0 "聖公会は国家元首が教会の首長をも務める組織を持つプロテスタントの一形態である。神学的及び制度的に、聖公会は改革派の清教徒や大陸のプロテスタントからの影響を受けながらも尚、カトリックの多くの要素を保持している。"
  anglican:0 "聖公会"
  divorce_consort_aspect:0 "§Y配偶者と離婚§!"
- desc_divorce_consort_aspect:1 "我が君は、配偶者が後継者にふさわしい子を産むことに失敗したと問題視している。彼女は出ていくべきだ。\n\n離婚した配偶者から、能力の最大値から£adm£、£dip£、£mil£を引いたものから§G12§!倍した各君主点を得る。\n§Y(6/6/6の配偶者ならば何も得ないが、0/0/0ならば72点の各君主点を獲得する。)§!"
+ desc_divorce_consort_aspect:1 "我が君は、配偶者が後継者にふさわしい子を産むことに失敗したと問題視している。彼女は出ていくべきだ。\n\n離婚した配偶者から、能力の最大値から£adm£、£dip£、£mil£を引いたものから§G12§!倍した各君主点を得る。\n§Y（6/6/6の配偶者ならば何も得ないが、0/0/0ならば72点の各君主点を獲得する。）§!"
  gain_consort_aspect:1 "§Y地方貴婦人の婚姻§!"
  desc_gain_consort_aspect:0 "国内には家柄が良く我々の君主との婚姻を望む独身者が多数いる。配偶者がいない現状を鑑みれば、この求婚者たちを考慮する必要がある。"
  dissolve_monasteries_aspect:0 "§Y修道院の解体§!"
@@ -473,7 +473,7 @@
  gain_consort_aspect_tt:0 "[Root.Monarch.GetName]は新たな配偶者と結婚する。新たな後継者の確率を§Y15年§!の間§G100%§!増加させる。"
  a_new_consort_heir_modifier:0 "新たな王室の配偶者"
  desc_a_new_consort_heir_modifier:0 "[Root.Monarch.GetTitle]の新たな配偶者のおかげで、新しい後継者が現れるでしょう。"
- dissolve_monasteries_aspect_tt:0 "§Y[Root.GetChurchOrFallbackName]§!は§Y15年§!間、§Y10§!の影響力を失います。"
+ dissolve_monasteries_aspect_tt:0 "§Y[Root.GetChurchOrFallbackName]§!は§Y15年間§!、§Y10§!の影響力を失います。"
  dissolve_monasteries_aspect_ct:0 "解体された修道院：$VAL|Y$§Y%§!"
  innovativeness_aspect:0 "§Y革新の奨励§!"
  desc_innovativeness_aspect:0 "教会の古い見方は迷信の時代の遺物である。我々聖職者と民衆の間に革新を奨励せねばならない。\n\n§Y15年間§!、革新性増加を§G+50.0%§!、改革進捗率を§G+15.0%§!する。\n§Y教会§!、§Y大聖堂§!、§Y大学§!のいずれかが建造されている、宗教が§Y聖公会§!の自領の州からランダムで1州、基本の生産を§G1§!増加させる。"
@@ -481,7 +481,7 @@
  anglican_innovativeness:0 "聖公会の革新性"
  desc_anglican_innovativeness:0 "英国国教会は、信仰と国家の栄光のために、思想と技術における新発見を奨励した。"
  expel_heretics_aspect:0 "§Y異端者の追放§!"
- desc_expel_heretics_aspect:0 "異端者は我々の宗教と文化にとって危険である。奴らを我が地から追放し、新大陸に送るべきだ。\n\n我々が植民州を領有している場合、その植民地は§G100§!の人口を獲得します。また、§Y15年§!間、入植可能性が§G5.0％§!、宗教統一度が§G10.0％§!増加します。\n§Y33％§!の確率で、その植民地は§Y異教§!の宗教のいずれかに適応します。"
+ desc_expel_heretics_aspect:0 "異端者は我々の宗教と文化にとって危険である。奴らを我が地から追放し、新大陸に送るべきだ。\n\n我々が植民州を領有している場合、その植民地は§G100§!の人口を獲得します。また、§Y15年間§!、入植可能性が§G5.0％§!、宗教統一度が§G10.0％§!増加します。\n§Y33％§!の確率で、その植民地は§Y異教§!の宗教のいずれかに適応します。"
  expel_heretics_aspect_tt:0 "ランダムで1つの領有する植民地が§G100§!の人口を獲得します。\n入植可能性と宗教統一度が増加します。"
  expelling_heretics:0 "異端者の追放"
  desc_expelling_heretics:0 "[Root.Monarch.GetTitle]の命は明確だ。異端を認める者は皆、火刑に処すか、遠隔地の植民地へ追放するものとする。"
