--- a/source/localisation/00_lanfang_l_english.yml
+++ b/source/localisation/00_lanfang_l_english.yml
@@ -172,7 +172,7 @@
  estate_church_karma_temples:0 "修道会の寺院"
  estate_church_karma_temples_desc:0 "神聖な仏教寺院の管理は、僧侶に任せるべきだ。"
  estate_church_karma_temples_tt:0 "§Yカルマ+3§!が、§Y寺院§!の建造物建設時に追加されます。\n§Yカルマ-3§!が、§Y寺院§!の建造物破壊時に追加されます。"
- estate_church_influence_temples:0 "教会の聖域権"
+ estate_church_influence_temples:0 "教会の聖域"
  estate_church_influence_temples_desc:1 "Respect the privilege of the Church of granting sanctuary to suspected criminals and debtors, this will please local Church authorities who can charge them lodging (and the Papacy), even if it comes at the cost of our secular authority."
  estate_church_influence_temples_tt:0 "§Y教皇への影響力+3§!が、§Y教会§!の建造物建設時に追加されます。\n§Y教皇への影響力-3§!が、§Y教会§!の建造物破壊時に追加されます。"
  estate_burghers_tropical_mod:0 "熱帯都市計画"
@@ -184,7 +184,7 @@
  estate_church_lao_animism:0 "民間信仰への寛容"
  estate_church_lao_animism_desc:0 "自国の信仰とは異なるが、国民の多くが古代の民族宗教を引き続き信仰することを受容する。"
  estate_church_lao_animism_effect_tooltip:0 "§Y精霊信仰§!の領有州はすべて、以下を得ます：\n州の布教強度：§R-100§!\n州の宗教的統一度の貢献値：§G-100§!"
- estate_church_lao_animism_revoke_effect_tooltip:1 "補正§Y「民間信仰への寛容」§!が、領有するすべての§Y精霊信仰§!の州から取り除かれます。"
+ estate_church_lao_animism_revoke_effect_tooltip:1 "補正§Y「民間信仰への寛容」§!が、§Y精霊信仰§!の全領有州から取り除かれます。"
  estate_church_lao_animism_mod:0 "民間信仰への寛容"
  desc_estate_church_lao_animism_mod:0 "自国の信仰とは異なるが、国民の多くが古代の民族宗教を引き続き信仰することを受容する。"
  flavor_mlc.9.t:0 "海上国家"
@@ -702,5 +702,5 @@
  ming_crisis.11.b:0 "多少譲歩すれば、彼らをなだめられるかもしれない……"
  lanfang_decision_formation_desc:0 "中国の採掘家たちはボルネオ島の金鉱の採掘を始めようとしている。彼らが最も効果的に仕事ができるように、自治権のあるコミュニティを設立することを認めるべきだろう。"
  estate_church_karma_temples_ct:0 "§Yカルマ+5§!が、§Y寺院§!の建造物建設時に追加されます。\n§Yカルマ-5§!が、§Y寺院§!の建造物破壊時に追加されます。"
- sia_importation_of_firearms:0 "Importation of Firearms"
+ sia_importation_of_firearms:0 "火器の輸入"
  sia_importation_of_firearms_desc:0 "While flintlock firearms has a much stronger firepower than matchlock arquebus, they remained a rare commodity here, which is why we should keep acquiring them through purchases from Westerners.\nWe have been able to cast our own cannons since the Ayutthaya period, notably with our large muzzleloader cannons that were called Charong, which were made of bronze and usually 4-5 inches in calibre."
