--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -806,7 +806,7 @@
  NO_ADVISOR_CULTURE:0 "顧問の文化"
  pasha_state:0 "パシャ"
  CREATE_JANISSARIES_BUTTON:1 "イェニチェリを徴集"
- CREATEJANISSARIES:1 "徴収されたイェニチェリ"
+ CREATEJANISSARIES:1 "イェニチェリを徴集"
  JANISSARIES_REGIMENT:0 "イェニチェリ連隊\n$EFFECT$"
  GAIN_PIETY:0 "律法主義に向け$VALUE|Y$移動します"
  LOSE_PIETY:0 "神秘主義に向け$VALUE|Y$移動します"
@@ -835,7 +835,7 @@
  RELATION_UPKEEP_ENTRY:0 "$NATION|Y$（$RELATION|G$）\n"
  nothingness_modifier:0 "徴集した部隊"
  COUNTRIES_AFFECTED_LIST:1 "\n\nこれは以下の国家に影響を及ぼします：\n$LIST$"
- STATE_JANISSARIES_GOVERNMENT_ALLOWS:0 "オスマン政府の国家のみイェニチェリを徴収できます。"
+ STATE_JANISSARIES_GOVERNMENT_ALLOWS:0 "オスマン政府の国家のみイェニチェリを徴集できます。"
  STATE_JANISSARIES_COOLDOWN:0 "$DATE|Y$にさらにイェニチェリを募集可能です。"
  STATE_JANISSARIES_NEED_MIL_POWER:0 "イェニチェリの徴集には$AMOUNT|Y$£mil£が必要です。"
  STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、異教徒の州でイェニチェリを徴兵可能。異教徒の開発度が大きいほど、より多くのイェニチェリを引き出すことができる。"
