--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1896,11 +1896,11 @@
  desc_mercs_not_allowed_to_loot_morale:0 "我々の雇用下にある傭兵団は、彼らが進軍する土地をおいて、好き放題に略奪することを制限されている。"
  cb_change_government_great_peasants_war:0 "農民を粉砕"
  cb_change_government_great_peasants_war_desc:0 "農民は国家を営む事業など持っていない。彼らを強制的に元の居場所へと戻す必要がある。"
- gpw_cb_tt:0 "帝国の加盟国はゲーム終了までの間、§Y農民を粉砕§!の開戦事由を獲得します。"
- gpw_noble_power_weak:1 "帝国全体の貴族階級はゲーム終了までの間、§G+5%§!の忠誠と§Y+5%§!の影響力を持つでしょう。"
- gpw_noble_power_strong:2 "帝国全体の貴族階級はゲーム終了までの間、§G+10%§!の忠誠と§Y+10%§!の影響力を持つでしょう。"
- gpw_peasant_power_strong:1 "帝国全体の貴族階級はゲーム終了までの間、§R-10%§!の忠誠と§Y-10%§!の影響力を持つでしょう。"
- gpw_peasant_power_weak:1 "帝国全体の貴族階級はゲーム終了までの間、§R-5%§!の忠誠と§Y-5%§!の影響力を持つでしょう。"
+ gpw_cb_tt:0 "帝国の加盟国は、開戦事由§Y農民を粉砕§!をゲーム終了まで獲得します。"
+ gpw_noble_power_weak:1 "帝国全体で貴族階級は、忠誠§G+5%§!と影響力§Y+5%§!をゲーム終了まで持ちます。"
+ gpw_noble_power_strong:2 "帝国全体で貴族階級は、忠誠§G+10%§!と影響力§Y+10%§!をゲーム終了まで持ちます。"
+ gpw_peasant_power_strong:1 "帝国全体で貴族階級は、忠誠§R-10%§!と影響力§Y-10%§!をゲーム終了まで持ちます。"
+ gpw_peasant_power_weak:1 "帝国全体で貴族階級は、忠誠§R-5%§!と影響力§Y-5%§!をゲーム終了まで持ちます。"
  great_peasants_war_concessions_triggered_modifier:0 "農民への譲歩"
  desc_great_peasants_war_concessions_triggered_modifier:0 "大農民戦争は帝国に対して農民の権利を再考することを強制した。多くの譲歩が与えられ、古い特権が保証されたため、彼らの労働力から富を引き出す能力は減少している。"
  gpw_concessions_triggered_modifier_tt:0 "トリガー補正§Y「農民への譲歩」§!が有効となり、農民共和国ではない神聖ローマ帝国領邦に国家税収補正§R-5%§!が与えられます。"
@@ -3324,6 +3324,6 @@
  emperor_privilegia_de_non_appelando_member:0 "諸侯特権の廃止"
  dutch_revolt_disaster_at:0 "§Y低地諸国§!の非§Y[Root.Religion.GetName]§!の州である。"
  dutch_revolt_disaster_bt:0 "§Y低地諸国§!で不穏度が§Y3§!の州である。"
- LORD_ADMIRAL:0 "Lord Admiral"
- LORD_ADMIRAL_fem:0 "Lord Admiral"
+ LORD_ADMIRAL:0 "海軍卿"
+ LORD_ADMIRAL_fem:0 "海軍卿"
  desc_mary_is_on_the_throne:0 "彼女の馬が事故を起こさなくなる。"
