--- a/source/localisation/gecko_1_35_l_english.yml
+++ b/source/localisation/gecko_1_35_l_english.yml
@@ -1,13 +1,13 @@
 ﻿l_english:
- FEDERATION_STRENGTH_MANPOWER:0 "From $MANPOWER|Y0$ Maximum Manpower: $SCORE|Y$"
- MAX_PRIVILEGES_BASE:0 "Base Value: $VALUE|Y0$"
+ FEDERATION_STRENGTH_MANPOWER:0 "人的資源最大値$MANPOWER|Y0$から：$SCORE|Y$"
+ MAX_PRIVILEGES_BASE:0 "基本値：$VALUE|Y0$"
  START_OPTION_HISTORIC:0 "§Y史実スタート§!"
  START_OPTION_SAVEGAME:0 "§Yセーブゲームスタート§!"
  START_OPTION_LESSON:0 "§Y練習スタート§!"
  START_OPTION_NOT_HOST:0 "ホストのみ利用可能"
  GAMESETUP_OPEN_MUSIC_PLAYER:0 "音楽プレイヤーを開く"
  MUSIC_PLAYER_MUSIC:0 "音楽"
- MUSIC_PLAYER_LESSONS:0 "Lessons"
+ MUSIC_PLAYER_LESSONS:0 "レッスン"
  CHANNEL_music_conquestofconstantinople:0 "Conquest of Constantinople"
  CHANNEL_music_songsofthenewworld:0 "Songs of the New World"
  CHANNEL_music_songs_of_yuletide:0 "Songs of Yuletide"
@@ -40,9 +40,9 @@
  CHANNEL_music_ottomanmusic:0 "Ottoman Music"
  CHANNEL_music_scandinavianmusic:0 "Scandinavian Music"
  CHANNEL_music_songs:0 "General Music"
- LESSON_CHANNEL_CLICK_TO_EXPAND:0 "$NAME$\n§GClick to expand§!"
- LESSON_CHANNEL_CLICK_TO_MINIMIZE:0 "$NAME$\n§GClick to collapse§!"
+ LESSON_CHANNEL_CLICK_TO_EXPAND:0 "$NAME$\n§G展開するにはクリック§!"
+ LESSON_CHANNEL_CLICK_TO_MINIMIZE:0 "$NAME$\n§G折りたたむにはクリック§!"
  LESSON_ENTRY_TOOLTIP_HEADER:0 "$NAME|Y$\n"
- LESSON_ENTRY_TOOLTIP_DATE:0 "Changes date to $DATE|Y$"
- LESSON_ENTRY_TOOLTIP_TAG:0 "Selects $TAG|Y$"
- LESSON_ENTRY_TOOLTIP_FOOTER:0 "§GClick to play§!"
+ LESSON_ENTRY_TOOLTIP_DATE:0 "日付を$DATE|Y$にしてください"
+ LESSON_ENTRY_TOOLTIP_TAG:0 "$TAG|Y$を選択してください"
+ LESSON_ENTRY_TOOLTIP_FOOTER:0 "§G開始するにはクリック§!"
