--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -826,7 +826,7 @@
  EVTNAME858:0 "無能な外交！"
  EVTDESC858:0 "外交における$MONARCH$の無能さは想像を絶する。$RULER_S_PRONOUN$が一体何をやらかしたのか知る由もないが、$RULER_S_PRONOUN$が大使に送った謝罪の手紙ただ一通で、世界における我が国の外交的地位は傷つけられた。"
  EVTOPTA858:0 "一体どうやればそんなことができたのだ？"
- EVTDESC9471:1 "国境は有機的なもので、季節によって変化あるいは変質したり、最新の征服者の運命と共に通過したりもする。歴史家は、おそらく、西暦$YEAR$年に$PROVINCENAME$で起こった出来事は必然的なものだったと言うだろう。$PROVINCENAME$は$COUNTRY$の慈悲深い支配の下で繁栄し続けていたため、国境の反対側の田舎者たちの嫉妬を受けるようになった。おそらく彼らは我々に対してあまり公平ではないだろう。いずれにしても、$PROVINCENAME$の緊張はライバルである[neighbour_country.GetUsableName]に我々に対する開戦事由を与えることになった。"
+ EVTDESC9471:1 "国境は有機的なもので、季節によって変化あるいは変質したり、最新の征服者の運命と共に通過したりもする。歴史家は、おそらく、西暦$YEAR$年に$PROVINCENAME$で起こった出来事は必然的なものだったと言うだろう。「$PROVINCENAME$は$COUNTRY$の慈悲深い支配の下で繁栄し続けていたため、国境の反対側の田舎者たちの嫉妬を受けるようになった。」おそらく彼らは我々に対してあまり公平ではないだろう。いずれにしても、$PROVINCENAME$の緊張はライバルである[neighbour_country.GetUsableName]に我々に対する開戦事由を与えることになった。"
  EVTOPTC9472:0 "徴兵だ"
  EVTNAME841:0 "海軍の改革者"
  EVTDESC841:0 "我々が陸軍を犠牲にしてもう少しそれを支持することにしたため、我々の海軍の全体的な性能は確実に改善した。偉大な技能を持った将校が集団から浮上している。"
@@ -1139,7 +1139,7 @@
  EVTOPTB3093:0 "彼らの哀れな試みを無視する。"
  EVTNAME3094:1 "揺らぐ[Root.GetCapitalName]の防衛"
  EVTDESC3094:1 "$PROVINCENAME$の大部分はすでに反乱軍の手にある。州の至る所で、我々の軍隊は撤退し、我々の支持者たちは行方をくらませている。持ち堪えているのは[Root.GetCapitalName]の都市のみだ。しかし、都市を防衛する大規模な集団が逃亡しため、州全体が崩壊するのは時間の問題だ。"
- EVTOPTA3094:0 "彼らが再び攻撃する前に、我々は再編成しなければならない。"
+ EVTOPTA3094:0 "彼らが再び攻撃する前に、我々は再編制しなければならない。"
  EVTOPTB3094:0 "それならそれでよい。"
  EVTNAME3095:0 "脱走兵たち"
  EVTDESC3095:1 "我々の軍隊の士気は低く、脱走兵の集団が反乱軍に加わっているのが目撃されている。これが続けば、我々は反乱軍が国家を奪い取るのを止めることはできないだろう。"
@@ -1302,7 +1302,7 @@
  EVTDESC5045:1 "我々の政策は、庶民と貴族の間で広範な不満を呼び起こしている。それらは我々の意図に反する方法により、我々の反対者が政府の悪意と領域の福祉への関心の欠如の証拠として、それらを支持する程度にまで誤解されているようだ。"
  EVTOPTA5045:0 "我々は正しい道を選択している。"
  EVTOPTB5045:0 "状況の改善を試みる。"
- EVTNAME5050:0 "[Root.Get聖職者Name]たちの不幸"
+ EVTNAME5050:0 "[Root.GetClergyName]たちの不幸"
  EVTDESC5050:1 "我々の政府と[Root.GetClergyName]との間の宗教的および世俗的な問題についての意見や関心の相違が広がり、重大な紛争の原因となっている。[Root.GetClergyName]は政策の変更を要求しており、失敗すれば[Root.GetRulerTitleOrRegency]への支持を取り消すだろう。"
  EVTOPTA5050:0 "彼らの要求を無視する。"
  EVTOPTB5050:0 "彼らの要求に同意する。"
@@ -1335,7 +1335,7 @@
  EVTOPTA5057:0 "これは最も重要だ。"
  EVTOPTB5057:0 "金がかかりすぎる。"
  EVTNAME5058:0 "貴族の特権の要求"
- EVTDESC5058:0 "[Root.Get貴族Name]の特権は、$MONARCH$がますます支配を集中化しようとしたため、継続的に攻撃を受けている。貴族たちはついに忍耐を失い、彼らが正当だと信じているものを彼らに返すよう要求している。"
+ EVTDESC5058:0 "[Root.GetNobilityName]の特権は、$MONARCH$がますます支配を集中化しようとしたため、継続的に攻撃を受けている。貴族たちはついに忍耐を失い、彼らが正当だと信じているものを彼らに返すよう要求している。"
  EVTOPTA5058:0 "彼らの正当な主張を受け入れる。"
  EVTOPTB5058:0 "彼らの要求を無視する。"
  EVTNAME5059:0 "交易会社のバブルが破裂"
@@ -1356,7 +1356,7 @@
  EVTOPTB5063:0 "彼らと決着をつけよう。"
  EVTOPTC5063:0 "問題の解決を試みる。"
  EVTNAME5064:0 "貴族と外国権力との連携"
- EVTDESC5064:1 "[Root.Get貴族Name]はしばしば[Root.Monarch.GetTitle]の手に負えない臣下であることを証明しており、彼らの自治への侵害に抵抗し、彼らの地位を強化するあらゆる機会を掴もうとする。多くの場合、これには外国勢力との共通の主張を作ることが含まれる。最近、いくつかの主要な人物が[neighbour_country.GetUsableName]と合意に達し、特定の賛同と約束と引き換えに親[neighbour_country.GetAdjective]の行動方針を支持しているようだ。直接の反逆ではないが、この行動は明らかに我々の利益にとって有害であり、しかしながら、彼らを抑えることが容易でないことは証明される可能性はある。"
+ EVTDESC5064:1 "[Root.GetNobilityName]はしばしば[Root.Monarch.GetTitle]の手に負えない臣下であることを証明しており、彼らの自治への侵害に抵抗し、彼らの地位を強化するあらゆる機会を掴もうとする。多くの場合、これには外国勢力との共通の主張を作ることが含まれる。最近、いくつかの主要な人物が[neighbour_country.GetUsableName]と合意に達し、特定の賛同と約束と引き換えに親[neighbour_country.GetAdjective]の行動方針を支持しているようだ。直接の反逆ではないが、この行動は明らかに我々の利益にとって有害であり、しかしながら、彼らを抑えることが容易でないことは証明される可能性はある。"
  EVTOPTA5064:0 "彼らは裏切りの対価を支払うことになるだろう。"
  EVTOPTB5064:0 "我々は後でそれらに対処する。"
  EVTNAME5065:0 "貴族の暗殺"
@@ -1364,7 +1364,7 @@
  EVTOPTA5065:0 "彼ら自身で解決させよう。"
  EVTOPTB5065:0 "この状況を制御しよう。"
  EVTNAME5066:0 "教会機能の停止"
- EVTDESC5066:1 "数人の[Root.Get貴族Name]が、提案を携え[Root.GetRulerTitleOrRegency]の前にやって来た。より多くの土地と称号を求めるのに必死な彼らは、かなりの土地を所有する[Root.Get聖職者Name]に羨望の眼差しを向けている。彼らは、[Root.GetStateForm]の尽力に対する多額の現金の寄付と引き換えに、教会の土地を彼らに譲渡するように求めている。もちろん、この短期的な収入の増加と引き換えに、我々は長期的に見ると、教会の土地からの税収を失うことになる。"
+ EVTDESC5066:1 "数人の[Root.GetNobilityName]が、提案を携え[Root.GetRulerTitleOrRegency]の前にやって来た。より多くの土地と称号を求めるのに必死な彼らは、かなりの土地を所有する[Root.GetClergyName]に羨望の眼差しを向けている。彼らは、[Root.GetStateForm]の尽力に対する多額の現金の寄付と引き換えに、教会の土地を彼らに譲渡するように求めている。もちろん、この短期的な収入の増加と引き換えに、我々は長期的に見ると、教会の土地からの税収を失うことになる。"
  EVTOPTA5066:0 "受け入れよう。"
  EVTOPTB5066:0 "拒否しよう。"
  EVTNAME5068:0 "公的機関の売却"
@@ -1404,7 +1404,7 @@
  EVTDESC5077:1 "[Root.Monarch.GetTitle]は多くの布告を発するが、実際には[Root.Monarch.GetSheHe]はその執行にはほとんど力を持たなかった。代わりに、執行は地方の権力（地方の貴族や市政府）に依存し、それは常に望まれるほど注意深いとは限らなかった。最近、[troublesome_province.GetAreaName]の当局が[Root.Monarch.GetTitle]の意志を強制することに特に慎重になっていることが注目を集めている。"
  EVTOPTA5077:0 "彼らに任せよう。"
  EVTOPTB5077:0 "試みを増やそう！"
- EVTNAME5082:1 "[Root.Get市民Name]が特権を要求"
+ EVTNAME5082:1 "[Root.GetBurghersName]が特権を要求"
  EVTDESC5082:1 "[Root.GetBurghersName]は、高貴な一族の権力、特に政府の上位への機会の欠如に対し憤慨を強めている。彼らの権力への唯一の道は、貧しいが名のある高貴な一族と結婚すること、または[Root.GetRulerTitleOrRegency]により大きな特権を要求することで、政界で開かれた地位をこじ開けることである。"
  EVTOPTA5082:0 "彼らに権限を付与しよう。"
  EVTOPTB5082:0 "拒否しよう。"
@@ -1433,7 +1433,7 @@
  EVTOPTA5088:0 "苦情を発展させる。"
  EVTOPTB5088:0 "外交的解決を求める。"
  EVTNAME5089:0 "請願の申し立て"
- EVTDESC5089:1 "[uppity_peasants_province.GetName]における地方の[Root.Get貴族Name]の1人のひどい混乱と臣下への酷使に対し、農民の代表たちが[Root.GetRulerTitleOrRegency]の前で救済を求めている。これを受け入れることは農民の間で人気を集めるだろうが、[Root.Get貴族Name]にとっては彼らの権利への侵害と見なされるだろう。"
+ EVTDESC5089:1 "[uppity_peasants_province.GetName]における地方の[Root.GetNobilityName]の1人のひどい混乱と臣下への酷使に対し、農民の代表たちが[Root.GetRulerTitleOrRegency]の前で救済を求めている。これを受け入れることは農民の間で人気を集めるだろうが、[Root.GetNobilityName]にとっては彼らの権利への侵害と見なされるだろう。"
  EVTOPTA5089:0 "請願を受け入れよう。"
  EVTOPTB5089:0 "請願を拒否しよう。"
  EVTNAME5090:0 "貴族たちが援助を要求"
@@ -1453,7 +1453,7 @@
  EVTOPTA5093:1 "[Root.Dip_Advisor.GetHerHim]はクビだ！"
  EVTOPTB5093:1 "我々は[Root.Dip_Advisor.GetHerHim]を信じている。"
  EVTNAME5094:0 "異端者の顧問"
- EVTDESC5094:1 "[Root.GetClergyName]は異端者である[Root.GetEventAdvisorTitle][Root.GetEventAdvisorName]が[Root.Monarch.GetTitle]の顧問として採用されるであろうことに憤慨している。彼らは[Root.GetEventAdvisorHerHis]の即時解任を要求している！"
+ EVTDESC5094:1 "[Root.GetClergyName]階級は異端者である[Root.GetEventAdvisorTitle][Root.GetEventAdvisorName]が[Root.Monarch.GetTitle]の顧問として採用されるであろうことに憤慨している。彼らは[Root.GetEventAdvisorHerHis]の即時解任を要求している！"
  EVTOPTA5094:1 "[Root.GetEventAdvisorHerHim]はクビだ！"
  EVTOPTB5094:1 "我々は[Root.GetEventAdvisorHerHim]を信じている。"
  EVTNAME5095:0 "政治家は権力を得る"
@@ -1468,7 +1468,7 @@
  EVTDESC5097:1 "農民をその場所に留めておこうとする努力が最近、些か成功しすぎている。実際、我々の支配は過酷であり、貧民たちは苦情を言うようになり、領主に背を向け、より良い待遇と条件を要求している。"
  EVTOPTA5097:0 "農奴制を適用しよう。"
  EVTOPTB5097:0 "こういうこともあるさ。"
- EVTNAME5098:0 "[Root.Get聖職者Name]たちの汚職"
+ EVTNAME5098:0 "[Root.GetClergyName]たちの汚職"
  EVTDESC5098:1 "[Root.GetClergyName]は買収されないように意図さており、結局のところ、それが彼らの説教である。しかし、彼らは常に自分の教えに忠実であるとは限らないようだ。スキャンダルは彼らの主導的な人物のいくつかを巡って発生し、彼らは人々に正直な宗教的指導を与える代わりに、長期間にわたって彼ら自身を様々な危険な取引を通じ、不正に豊かなものにしていたようだ。"
  EVTOPTA5098:0 "教会を清めよう。"
  EVTOPTB5098:0 "罪人を罰する。"
@@ -1575,7 +1575,7 @@
  EVTOPTA9006:0 "選択の余地はあるが、この変化を受け入れよう。"
  EVTOPTB9006:0 "伝統の放棄を黙認するつもりはない。"
  EVTNAME9008:0 "切支丹との緊張"
- EVTDESC9008:0 "最近新しいヨーロッパの宗教と、十字架にかけられた神の物語に改宗した$PROVINCENAME$のキリシタンの共同体は、地元の大名と対立している。地元の緊張は、開放的な反乱に陥る恐れがある。"
+ EVTDESC9008:0 "最近新しいヨーロッパの宗教と、十字架にかけられた神の物語に改宗した$PROVINCENAME$の「キリシタン」共同体は、地元の大名と対立している。地元の緊張は、開放的な反乱に陥る恐れがある。"
  EVTOPTA9008:0 "くそ！"
  EVTNAME9010:0 "朱印船の帰還"
  EVTDESC9010:0 "船の背の高いマストはほとんど空に届きそうなほど伸びている。帆は今は降ろされているが、水面が近い船は豊かな貨物を物語っている。朱印船は、ちょうど今日、南海交易の旅から戻り、遠くの土地の珍品をもたらしている。"
@@ -2817,8 +2817,8 @@
  EVTNAME873:0 "豊作"
  EVTDESC873:1 "今年の収穫は素晴らしいものだった！我が国の歴史の中では珍しく、大地はその恵みの多くをもたらした。民衆はすでに、これを我々の支配に対する神の好意の印だと解釈している。"
  EVTOPTA873:0 "我々は祝福されている！"
- EVTNAME874:0 "[Root.Get貴族Name]と[Root.Get聖職者Name]との緊張"
- EVTDESC874:0 "我が国では2つの階級が大きな力を持っている。[Root.Get貴族Name]と[Root.Get聖職者Name]である。しかし、彼らは必ずしも仲が良いわけではない。最近[rebel_province.GetName]の男爵とその領地の地方の修道院は、誰がより大きな土地を所有するかについて争い始めた。\n\n最近、王の宮廷には神の権利について騒がしい人々が殺到している。[Root.Get貴族Name]は土地と[Root.Get聖職者Name]を支配する神的権利を主張し、地球上の神の代表者としての地位を主張している。問題の男爵が[Root.Get聖職者Name]に対して他の貴族を扇動し、あらゆる種類の一時的な財産を保持する権利を疑問視したことで、全体の状況はむしろ不安定になっている。修道院長は大司教を彼の側に引き入れた。彼は我々が[Root.Get貴族Name]と仲良くなることを決めるようなら、ローマに直行しようとしている。さて、我々はどうするべきだろうか？"
+ EVTNAME874:0 "[Root.GetNobilityName]と[Root.GetClergyName]との緊張"
+ EVTDESC874:0 "我が国では2つの階級が大きな力を持っている。[Root.GetNobilityName]と[Root.GetClergyName]である。しかし、彼らは必ずしも仲が良いわけではない。最近[rebel_province.GetName]の男爵とその領地の地方の修道院は、誰がより大きな土地を所有するかについて争い始めた。\n\n最近、王の宮廷には神の権利について騒がしい人々が殺到している。[Root.GetNobilityName]は土地と[Root.GetClergyName]を支配する神的権利を主張し、地球上の神の代表者としての地位を主張している。問題の男爵が[Root.GetClergyName]に対して他の貴族を扇動し、あらゆる種類の一時的な財産を保持する権利を疑問視したことで、全体の状況はむしろ不安定になっている。修道院長は大司教を彼の側に引き入れた。彼は我々が[Root.GetNobilityName]と仲良くなることを決めるようなら、ローマに直行しようとしている。さて、我々はどうするべきだろうか？"
  EVTOPTA874:0 "イエス様は乞食と漁師の間で生きてきた、やってみないか？"
  EVTOPTB874:0 "確かに我らが聖下を怒らせたくはない。"
  EVTNAME875:0 "$CAPITAL_CITY$の女中"
@@ -3833,7 +3833,7 @@
  random_event.EVTDESC13:0 "我が$MONARCHTITLE$よ、イスラム世界のすべてからの、異常な数の貴族や商人たちが今年、メッカに巡礼した。これらの裕福な人々の往来の増加は、地方の交易を強化した！どのようにして税金をまとめるべきだろうか？"
  random_event.EVTOPTA13:0 "私の国庫にそれを送れ。"
  random_event.EVTOPTB13:0 "地方の商店に投資しろ。"
- random_event.EVTOPTC13:0 "[Root.Get聖職者Name]にそれを送れ。"
+ random_event.EVTOPTC13:0 "[Root.GetClergyName]にそれを送れ。"
  random_event.EVTNAME14:0 "驚くばかりの上演"
  random_event.EVTDESC14:1 "最近、型破りな音楽によってヨーロッパ中で名声を獲得した、[Root.female_troubadour.GetName]と呼ばれる若い女性の吟遊詩人が、宮廷で演奏するために招待された。彼女の衣装のさまに部屋全体が息を呑んだ。彼女の歌には、内容を変えた皮肉、型破りな性的表現への言及が無数にちりばめられており、ある時点で、大司教は真っ赤になって、部屋から飛び出した。上演が終わり、すべての目があなたの反応を聞くため、あなたに注がれている。"
  random_event.EVTOPTA14:0 "現代社会における愛と性に対する刺激的、魅惑的な見世物であった！"
@@ -4301,10 +4301,10 @@
  culture_religion_events.3.a:0 "素晴らしい！"
  culture_religion_events.3.b:0 "我々は、[Root.Monarch.GetTitle]の破壊的な権力を食い止めることを試みるべきだ。"
  culture_religion_events.4.t:0 "悪い影響"
- culture_religion_events.4.d:1 "正義の聖職者と[Root.GetNoblesReplacementForOtherGovernments]の多くは、[Root.Monarch.GetName]の異端的な信念が国家に悪影響を及ぼし、人々を危険にさらしているという認識で長い間一致している。\n我々の古い一族のうちの一つで、非常に敬虔な子孫である[Root.noblezealot.GetName]は、[rebel_province.GetName]の地方の司祭と共に、軍を編成し、[Root.Capital.GetCapitalName]において不道徳な異端者を退けるため、首都に向けて行軍している。"
+ culture_religion_events.4.d:1 "正義の聖職者と[Root.GetNoblesReplacementForOtherGovernments]の多くは、[Root.Monarch.GetName]の異端的な信念が国家に悪影響を及ぼし、人々を危険にさらしているという認識で長い間一致している。\n我々の古い一族のうちの一つで、非常に敬虔な子孫である[Root.noblezealot.GetName]は、[rebel_province.GetName]の地方の司祭と共に、軍を編制し、[Root.Capital.GetCapitalName]において不道徳な異端者を退けるため、首都に向けて行軍している。"
  culture_religion_events.4.a:0 "裏切り者は死なねばならない。"
  culture_religion_events.5.t:0 "異教徒の[Root.Monarch.GetTitle]"
- culture_religion_events.5.d:0 "[Root.Capital.GetCapitalName]において、[Root.heathen_ruler.GetReligionGroupName]の公然とした異教徒の存在が、我々の[Root.GovernmentName]の[Root.Religion.GetName]の国民たちの間で見過ごされることはなかった。正統性の中で、これは苛立ちと議論の共通の問題となっており、既存の宗教的緊張を伴う地域では、紛争の頻度がさらに増している。[Root.antimonarchistpriest.GetName]という名の司祭は[rebelprovince.GetAreaName]の人々に説教する中で、[Root.Capital.GetCapitalName]の汚職を繰り返し蒸し返すことによって、この状況をさらに扇動しようと試みたことが報告されている。この時点で、権力を拡大して行使することなく、彼を彼の地位から取り除くのは困難であるかもしれない。"
+ culture_religion_events.5.d:0 "[Root.Capital.GetCapitalName]において、[Root.heathen_ruler.GetReligionGroupName]の公然とした異教徒の存在が、我々の[Root.GovernmentName]の[Root.Religion.GetName]の国民たちの間で見過ごされることはなかった。正統性の中で、これは苛立ちと議論の共通の問題となっており、既存の宗教的緊張を伴う地域では、紛争の頻度がさらに増している。[Root.antimonarchistpriest.GetName]という名の司祭は[rebelprovince.GetAreaName]の人々に説教する中で、「[Root.Capital.GetCapitalName]の汚職」を繰り返し蒸し返すことによって、この状況をさらに扇動しようと試みたことが報告されている。この時点で、権力を拡大して行使することなく、彼を彼の地位から取り除くのは困難であるかもしれない。"
  culture_religion_events.5.a:0 "「権力」の拡大利用が唯一適切なものだ。"
  culture_religion_events.5.b:0 "事態を拡大させてはならない。"
  culture_religion_events.6.t:0 "[Root.Monarch.GetName]の[Root.new_monarch_religion.GetReligionGroupName]宮廷"
