--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -302,7 +302,7 @@
  permanent_marathas_council_reform:0 "常設マラーター評議会"
  permanent_marathas_council_reform_desc:0 "マラーターの将軍と市民団体の指導者は、我が国家の力の均衡の重要な部分である。我々は会合を正式化し、国を導くためのマラーターの常設評議会を設立すべきである。"
  governmental_purbias_register_reform:0 "政府プルビア登録"
- governmental_purbias_register_reform_desc:0 "国家は、インド全土から熟練のラージプート兵を呼び寄せる対策を講じている。彼らをより効果的に配備できるよう、到着次第これらの戦士たちを組織して団結した連隊に編成する措置を講じるべきだ。"
+ governmental_purbias_register_reform_desc:0 "国家は、インド全土から熟練のラージプート兵を呼び寄せる対策を講じている。彼らをより効果的に配備できるよう、到着次第これらの戦士たちを組織して団結した連隊に編制する措置を講じるべきだ。"
  mechanic_maratha_general_interaction_yes:2 "マラーターの階級特権「§Yマラーターの軍事的指導§!」を有効にし、最大§G+10%§!の規律と§R-15%§!の税収を与え、マラーターの土地所有権に応じて値は調整されます。"
  mechanic_maratha_general_interaction_no:0 " "
  mechanic_better_purbias_interaction_yes:1 "ラージプートの階級特権「§Yプルビヤの徴募§!」は、ラージプート連隊に対して§G5%§!の規律の増加を与えてくれます。"
@@ -354,8 +354,8 @@
  mechanic_enables_horde_idea_group_no:1 "§Y遊牧民§!アイデアを禁止します。"
  mechanic_enables_divine_idea_group_yes:1 "§Y神聖§!アイデアを許可します。"
  mechanic_enables_divine_idea_group_no:1 "§Y神聖§!アイデアを禁止します。"
- mechanic_has_unify_china_cb_yes:1 "§Y中華統一§!の開戦事由が利用可能"
- mechanic_can_inherit_personal_unions_yes:0 "Enables §YInheriting Junior Parnters in a Personal Union§!."
- mechanic_can_inherit_personal_unions_no:0 "Disables §YInheriting Junior Parnters in a Personal Union§!."
- mechanic_has_janissaries_yes:0 "§Yイェニチェリ§!を雇用できます。"
+ mechanic_has_unify_china_cb_yes:1 "開戦事由「§Y中華統一§!」が利用可能"
+ mechanic_can_inherit_personal_unions_yes:0 "§Y同君連合の下位国の継承§!を有効にします。"
+ mechanic_can_inherit_personal_unions_no:0 "§Y同君連合の下位国の継承§!を無効にします。"
+ mechanic_has_janissaries_yes:0 "§Yイェニチェリ§!を募集できます。"
  mechanic_has_janissaries_no:0 "§Yイェニチェリ§!をもう雇用できなくなります。"
