--- a/source/localisation/institutions_l_english.yml
+++ b/source/localisation/institutions_l_english.yml
@@ -114,4 +114,4 @@
  tooltip_province_protestant_RB:0 "州がプロテスタント、聖公会、改革派のいずれかである"
  tooltip_owner_protestant:2 "交易会社でなく、国教がプロテスタント、聖公会または改革派"
  desc_birthplace_of_the_renaissance:0 "この州はルネサンスの中核で、今でもその発祥によって恩恵を受けている。"
- INSTITUTION_GREAT_POWER_BONUS:1 "$NUM|Y$つの制度を受容していないことによるペナルティー: $BONUS$"
+ INSTITUTION_GREAT_POWER_BONUS:1 "$NUM|Y$つの制度を受容していないことによるペナルティー：$BONUS$"
