--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -83,7 +83,7 @@
  shan_confederation_tt:0 "主要文化が§Yシャン§!文化である国家全てが、自国の同盟国もしくは従属国でなければならない。"
  shan_confederation_tt_2:0 "主要文化が§Yシャン§!文化の国家の中で、§Y[Root.GetName]§!より多い陸軍連隊を保有する国家が存在しない。"
  mnd_siam_prepare_title:0 "侵略の準備"
- mnd_siam_prepare_desc:0 "マラッカ侵攻に備え、立派な艦隊を編成するとともに、自国の行動で中華皇帝を刺激しないようにせねばならない。"
+ mnd_siam_prepare_desc:0 "マラッカ侵攻に備え、立派な艦隊を編制するとともに、自国の行動で中華皇帝を刺激しないようにせねばならない。"
  mnd_siam_mlc_title:0 "マラッカ侵攻"
  mnd_siam_mlc_desc:0 "マラッカは交易港として繁栄しており、マレー半島にある自国の領地に加えて、素晴らしいものとなるだろう。"
  mnd_siam_trade_title:0 "香辛料貿易の支配"
@@ -882,7 +882,7 @@
  desc_rebuilding_the_towns:0 "街や村落を、もっと大きく強大にしている！"
  grain_production_improved:0 "穀物生産の改善"
  desc_grain_production_improved:0 "国民による農場の生産能力を改善する尽力のおかげで、穀物の備蓄は大幅に増大するだろう。"
- pow_just_around_the_riverbend_title:0 "Just Around the River Bend"
+ pow_just_around_the_riverbend_title:0 "川の向こうで"
  pow_just_around_the_riverbend_desc:0 "カヌーは、自文化の重要な象徴というだけではなく、旅行や釣り、交易、さらには戦争にまで、生活に欠かせないものだ。カヌーの数をしっかり揃えることで、活動の全てにおいて役立つであろう。"
  pow_beyond_the_shore:0 "海岸の先"
  desc_pow_beyond_the_shore:0 "自国のカヌーは、賞賛を受けており、恐れられてもいる。"
