--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -771,7 +771,7 @@
  dlh_textile_industry.tooltip:0 "§Y織物工場§!または§Y綿花§!を産出する§Y大規模農園§!がある州を10州領有する"
  dlh_grand_trunk_road_title:0 "大幹道"
  dlh_grand_trunk_road_desc:0 "大幹道は世界で最も古い通商路の一つであり、西のカーブルから東のベンガルまで及ぶ。この古代の経路全体を支配できたならば、インド北部全域で効率的な輸送網を持つことになるであろう。"
- dlh_grand_trunk_road.tooltip:0 "ラホール、シルヒンド、上ドアーブ、下ドアーブ、プルヴァンチャル、ビハール、ガウル、東ベンガル地域の領有州はすべて、ゲーム終了まで§Y大幹道§!を獲得し、以下の効果を得ます：\n友軍移動速度 §G+25%§!"
+ dlh_grand_trunk_road.tooltip:0 "ラホール、シルヒンド、上ドアーブ、下ドアーブ、プルヴァンチャル、ビハール、ガウル、東ベンガル地域の領有州はすべて、§Y大幹道§!をゲーム終了まで獲得し、以下の効果を得ます：\n友軍移動速度 §G+25%§!"
  dlh_conquer_orissa_title:0 "オリッサの征服"
  dlh_conquer_orissa_desc:0 "ジャガンナートの従者たる信仰者たちは、ガルジャートの密林が彼らを我々の支配から保護してくれると信じて逃げた。彼らに我々の猛攻はいかなる障害も凌ぐということを見せつけてやれ！"
  ori_vassals_mission_title:0 "ガルジャートを支配せよ"
@@ -1459,8 +1459,8 @@
  lit_conquer_muscovy_title:0 "モスクワとの同君連合"
  lit_conquer_muscovy_desc:0 "彼らの力を抑止する強いノヴゴロドがいてさえも、モスクワは承服できない脅威のままだ。リトアニアの王を彼らの王位へとおかねばならない、あるいは、モスクワを攻撃せねばならない。"
  develop_ukraine_tooltip:0 "以下のいずれか1つを満たす§Yルテニア§!地方に所属する州の内、§Y10§!州を領有する。\n開発度が§Y10§!以上ある\n§Y寺院§!がある\n§Y大聖堂§!がある"
- develop_ukraine_effect_tooltip:0 "§Yルテニア§!地方の全領有州は、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n州の開発コスト：§G-5%§!\n州の不穏度：§G-2§!"
- develop_ukraine_effect_tooltip_2:1 "§Yルテニア§!地方の全領有州は、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n税収：毎年§G＋0.50§!\n州の不穏度：§G-2§!"
+ develop_ukraine_effect_tooltip:0 "§Yルテニア§!地方の全領有州は、§Y「ルテニアの復興」§!をゲーム終了まで獲得し、以下の効果を得ます：\n州の開発コスト：§G-5%§!\n州の不穏度：§G-2§!"
+ develop_ukraine_effect_tooltip_2:1 "§Yルテニア§!地方の全領有州は、§Y「ルテニアの復興」§!をゲーム終了まで獲得し、以下の効果を得ます：\n税収：毎年§G＋0.50§!\n州の不穏度：§G-2§!"
  plc_election_mission_tooltip:0 "ポーランドで新しい統治者が選出されました。"
  prussian_confederation_mission_pol_title:0 "プロイセン同盟"
  prussian_confederation_mission_pol_desc:0 "西プロイセンの人々はチュートン騎士団の支配から解放される事を叫ぶ。自由を得るために戦う彼らの支援を行わねばならない。"
@@ -1705,7 +1705,7 @@
  gc_por_japanese_trade_desc:0 "すべての見知らぬ人が不審に思えるが、日本の封建的支配者は、どんな商人にも交易の権利や日本の港への上陸さえも中々許してくれない。彼らの疑念を克服する方法を見つけ、この独占的な市場の足場を持つ唯一のヨーロッパ勢力とならなければならない。"
  gc_por_triangle_trade_title:0 "三角貿易"
  gc_por_triangle_trade_desc:0 "アフリカの奴隷は、新世界の大農園で働くために送られる。この奴隷労働の製品は、その後ヨーロッパに送り返され、法外な利益率で売却される。これが大西洋の三角貿易であり、我々はこれを支配しなければならない。"
- por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、「§Y三角貿易§!」を§Y20年§!間獲得し、以下の効果を得ます：\n交易品生産：§G+10%§!"
+ por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、「§Y三角貿易§!」を§Y20年間§!獲得し、以下の効果を得ます：\n交易品生産：§G+10%§!"
  por_indian_investment_tooltip:1 " §Yインド§!亜大陸で領有するステートに、交易会社投資が1以上ある"
  gc_portugal_discovers_india_title:0 "インドへ前進"
  gc_portugal_discovers_india_desc:0 "我々はプレスター・ジョンの王国の兆候を見つけられていないが、香辛料貿易を手にしてムーア人に打撃を与えることができる。我々は、我々がキリスト教世界を守るために少しでも何かできるように、インドを発見する必要がある。"
@@ -1989,9 +1989,9 @@
  port_jesuits_alternative_tooltip:1 "自国または従属国（非朝貢国）が§Yブラジル植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y20§!州領有する"
  unite_home_region_ct:0 "§Y[Root.Capital.GetRegionName]§!地方の州がすべて§Y[Root.GetName]§!に領有されている。"
  gc_cas_spa_potosi_tt:0 "[809.GetName]を領有する従属国が§Y[809.GetName]§!に§Y遷都§!します。"
- gc_cas_spa_reconquista_one_ct:0 "既に§Yナバラの属国化§!のミッションを完了していた場合、§Y[Root.GetName]§!は§Y[POR.GetName]§!に対し§Y連合の回復§!の開戦事由を獲得します。"
- gc_cas_spa_reconquista_one_bt:0 "既に§Yナバラの属国化§!のミッションを完了していた場合、§Y[Root.GetName]§!は§Yベイラ§!および§Yアレンテージョ§!地域に恒久的な請求権を獲得します。"
- gc_cas_spa_navarra_ct:0 "既に§Yアンダルシアの再請求§!のミッションを完了していた場合、§Y[Root.GetName]§!は§Y[POR.GetName]§!に対し§Y連合の回復§!の開戦事由を獲得します。"
- gc_cas_spa_navarra_bt:0 "既に§Yアンダルシアの再請求§!のミッションを完了していた場合、§Y[Root.GetName]§!は§Yベイラ§!および§Yアレンテージョ§!地域に恒久的な請求権を獲得します。"
- gc_cas_spa_army_ready2_title:0 "Prepare Reconquista"
- gc_cas_spa_army_ready2_desc:0 "For too long have we failed in our duty of care to the peoples of Iberia. We should prepare to unite them under one banner."
+ gc_cas_spa_reconquista_one_ct:0 "既にミッション「§Yナバラの属国化§!」を完了していた場合、§Y[Root.GetName]§!は§Y[POR.GetName]§!に対し§Y連合の回復§!の開戦事由を獲得します。"
+ gc_cas_spa_reconquista_one_bt:0 "既にミッション「§Yナバラの属国化§!」を完了していた場合、§Y[Root.GetName]§!は§Yベイラ§!および§Yアレンテージョ§!地域に恒久的な請求権を獲得します。"
+ gc_cas_spa_navarra_ct:0 "既にミッション「§Yアンダルシアの再請求§!」を完了していた場合、§Y[Root.GetName]§!は§Y[POR.GetName]§!に対し§Y連合の回復§!の開戦事由を獲得します。"
+ gc_cas_spa_navarra_bt:0 "既にミッション「§Yアンダルシアの再請求§!」を完了していた場合、§Y[Root.GetName]§!は§Yベイラ§!および§Yアレンテージョ§!地域に恒久的な請求権を獲得します。"
+ gc_cas_spa_army_ready2_title:0 "レコンキスタの準備"
+ gc_cas_spa_army_ready2_desc:0 "あまりにも長い間、我々はイベリアの人々を保護する義務に失敗してきた。我々は一つの旗の下で彼らを結びつけるために準備すべきだ。"
