Save/Update files [ci skip]

--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -517,10 +517,10 @@
  SIEGE_MERGE_UNITS_DEFENDER:0 "攻撃側ではないため、どのユニットも合流させることはできません。"
  SIEGE_PHASE_DESC:0 "$DAYS|Y$日後に次の包囲フェイズとなります。各包囲フェイズは$PHASEDAYS|Y$日です。"
  SIEGE_ATTACKER_NO_COMMANDER:0 "攻撃側には包囲司令官はいません。"
- SIEGE_BONUS_LEADER:0 "§Y指揮官の包囲能力§!からのフェイズ進行補正。"
- SIEGE_BONUS_ARTILLERY:0 "§Y包囲中の砲兵§!からのからのフェイズ進行補正。"
- SIEGE_BONUS_FORT:0 "§Y要塞レベル§!からのフェイズ進行補正。"
- SIEGE_BONUS_BREACH:0 "§Y城壁の裂け目§!からのフェイズ進行補正。"
+ SIEGE_BONUS_LEADER:0 "§Y指揮官の包囲能力§!によるフェイズ進行補正。"
+ SIEGE_BONUS_ARTILLERY:0 "§Y包囲中の砲兵§!によるフェイズ進行補正。"
+ SIEGE_BONUS_FORT:0 "§Y要塞レベル§!によるフェイズ進行補正。"
+ SIEGE_BONUS_BREACH:0 "§Y城壁突破§!によるフェイズ進行補正。"
  SIEGE_BONUS_NOBLOCKADE:0 "州が§Y封鎖されていない§!ことによるフェイズ進行補正。"
  SIEGE_BONUS_BLOCKADED:0 "州が§Y封鎖されている§!ことによるフェイズ進行補正。"
  SIEGE_PROGRESS_DESC:0 "現在の§Y包囲状態§!からのフェイズ進行補正。値は$MIN|Y0$から$MEMORY|Y0$になる。"
@@ -528,7 +528,7 @@
  PORT_BLOCKADE_DESC:0 "封鎖は、あなたの艦隊の総船速と州の開発を比較することによって計算されます。"
  PORT_BLOCKADE_CAPACITY:0 "この艦隊は、総開発$VAL|Y0$の州に隣接する港を完全に封鎖することができる。"
  NUM_OF_SHIPS:0 "船の総数"
- SIEGE_BONUS_DICE:0 "最後の§Yダイスロール§!からのフェイズ進行補正。"
+ SIEGE_BONUS_DICE:0 "最後の§Yダイスロール§!によるフェイズ進行補正。"
  CLOSE_UNIT_VIEW:0 "§Y閉じる§!"
  DESELECT_ALL:0 "§Yすべて閉じる§!"
  DESELECT_ALL_DESC:0 "選択されているすべてのユニットの選択を解除します。"
@@ -884,7 +884,7 @@
  PROV_SOME_PROVINCES_IN_TERRITORY:0 "あなたはこの州を領有していませんが、あなたが領有しているテリトリーに属しています。"
  SAVEGAME_ERROR_BACK_UP:1 "セーブファイルのバックアップに失敗しました！"
  SAVEGAME_ERROR_BACK_UP_DESC:1 "$FROM|Y$から$TO|Y$へ名称変更すると、セーブファイルをバックアップできませんでした。\n\nこれらのファイルのいずれかまたは両方をセーブフォルダから削除してみてください。"
- SAVEITEM_START_WITH_MISSING_DLC:0 "§Rこのセーブゲームはあなたが持っていないDLCで作成されました。あなたのゲームは不安定になる可能性が非常に高いです！鉄人モードの場合は、実績は無効になります！§!"
+ SAVEITEM_START_WITH_MISSING_DLC:0 "§Rこのセーブゲームはあなたが持っていないDLCで作成されました。ゲームが不安定になったり、問題が発生する可能性が非常に高いです！鉄人モードの場合は、実績が利用できなくなります！§!"
  IS_NOT_IN_LARGE_DEBT:0 "多額の負債がない。"
  IS_IN_ARGE_DEBT:0 "多額の負債がある。"
  SEVERITY_MILD:1 "穏やか"
