--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -747,14 +747,14 @@
  flavor_eng.EVTDESC9143:0 "1745年、オーストリア継承戦争がヨーロッパで猛威を振るっていた。イングランドはオーストリア領の南オランダで大勢の兵士を忙しくさせていた。チャールズ・エドワード・スチュアート（1720～1788）がスコットランドに大胆に上陸するのに機は熟していると思われた。彼と彼のジャコバイト支持者は1745年10月2日にプレストンパンツで英国軍を倒し、エディンバラに入り、そこで彼は父ジェームズをスコットランドの王として認めさせた。小規模軍の指揮官として、彼はダービーまでイングランドに侵攻したが、約束されたフランスの支援が実現しなかった（フランス軍の上陸は失敗した）時、退却しなければならなかった。カンバーランド公（北海沿岸の低地帯諸国から呼び出された）が率いる英国軍に追いつかれ、1746年4月16日にカロデンで敗れた。これはスチュアートが王座を取り戻すために得た最大限の試みであったが、気の早い若い王子は将軍の冷静なアドバイスを聞いていなかったので、かくしてスチュアートの王権への主張は永遠に埋没することとなった。"
  flavor_eng.EVTOPTA9143:0 "我々は彼らを粉砕するだろう！"
  flavor_eng.EVTOPTB9143:0 "スチュアートは王位を取り戻す！"
- flavor_eng.EVTNAME9144:0 "大ウィリアム・ピット"
- flavor_eng.EVTDESC9144:0 "初代のピット（1708～1778）であるウィリアム・ピットは、マドラス総督の孫であった。当初は軍人としての経歴を歩んでいたが、ホイッグ党の庶民院の議員となり、熱烈な愛国者となった。イングランドに世界の海洋帝国としての地位を与えるように努力し、ジョージ2世の深い憎しみにもかかわらず、1757年の連立政権を率いて、カナダとインドで決定的な成果を得た。1763年の彼の出発は、七年戦争を終結させたパリ条約の最も厳しい条項からフランスを救った。1766～1778年には健康に恵まれなかったにもかかわらず、1778年にフランスとの戦争を提唱した。"
+ flavor_eng.EVTNAME9144:0 "大ピット"
+ flavor_eng.EVTDESC9144:0 "初代ピットことウィリアム・ピット（1708～1778）は、マドラス総督の孫であった。当初は軍人としての経歴を歩んでいたが、ホイッグ党の庶民院の議員となり、熱烈な愛国者となった。イングランドに世界の海洋帝国としての地位を与えるように努力し、ジョージ2世の深い憎しみにもかかわらず、1757年の連立政権を率いて、カナダとインドで決定的な成果を得た。1763年の彼の出発は、七年戦争を終結させたパリ条約の最も厳しい条項からフランスを救った。1766～1778年には健康に恵まれなかったにもかかわらず、1778年にフランスとの戦争を提唱した。"
  flavor_eng.EVTOPTA9144:0 "優秀な大臣だ！"
  flavor_eng.EVTNAME9145:0 "東インド会社"
  flavor_eng.EVTDESC9145:0 "イングランド東インド会社は、2年前に創設されていたオランダ東インド会社により、困難な始まりとなった。モルッカ諸島（アンボン）とインドネシアの最初の交易所はすぐに圧倒され、オランダのインド（マドラス、ボンベイ、カルカッタ）に集中した活動により閉鎖された。彼女は、港湾工場の小さな商社から、インド亜大陸の大部分を支配するウォーレン・ヘイスティングスとロバート・クライヴ（1757年以降）の大規模なインド帝国建設まで、その最大の成功を見てきた。同社はすべての競争相手よりも長く続き、1857年の大規模なセポイの反乱の後、1867年に英国政府に引き継がれることとなった。"
  flavor_eng.EVTOPTA9145:0 "これを悪用しよう！"
- flavor_eng.EVTNAME9150:0 "小ウィリアム・ピット"
- flavor_eng.EVTDESC9150:0 "ウィリアム・ピットは、初代チャタム伯爵であるウィリアム・ピットの次男であった。1783年12月、ジョージ3世は連合を却下する機会を得て、24歳のピットに政府を設立するよう要請した。議会が1784年1月に再建されたとき、政権は事実上の信任投票で39票差で一度敗北したが、ピットは辞職を拒否し、連立政権の過半数が崩壊し始めた。3月8日には、彼に対する多数決はわずか1票となり、3月25日に議会が解散した。1788年には、グレートブリテン、プロイセン、オランダの間で三国同盟に署名し、将来の戦争では、アメリカ革命時のように同盟国を失わないことを確実にした。1790年、彼はオーストリアとトルコの和平を交渉することによって、グレートブリテンの新たな権力と威信を証明した。1784年、彼はインド法を可決し、インドの業務および東インド会社を監視する監視委員会を創設した。最後に、1791年にカナダ憲法が制定された。ロンドンは下カナダと上カナダの両方の政府に対して責任を持つこととなったが、どちらの州にも代表権のある議会が与えられた。"
+ flavor_eng.EVTNAME9150:0 "小ピット"
+ flavor_eng.EVTDESC9150:0 "ウィリアム・ピットは、初代チャタム伯爵ウィリアム・ピットの次男であった。1783年12月、ジョージ3世は連立政権を却下するにあたり、24歳のピットに組閣を打診した。1784年1月に議会が再開されると、事実上の問責決議案にて39票差で一度敗北するも、ピットは辞任を拒否し、次第に議会における前連立政権派の優位は崩れ始めた。3月8日には、彼に対する多数決はわずか1票となり、3月25日に議会が解散した。1788年には、イギリス、プロイセン、オランダの間で三国同盟に署名し、将来の戦争では、アメリカ革命時のように同盟国を失うことがないようにした。1790年には、オーストリアとトルコの和平交渉を行い、イギリスの権力と威信が回復したことを証明した。1784年、彼はインド法を可決させ、インドの業務および東インド会社を監視する監視委員会を創設した。最後に、1791年にカナダ憲法が制定された。ロンドンは下カナダと上カナダの両方の政府に対して責任を持つこととなったが、どちらの州にも代表権のある議会が与えられた。"
  flavor_eng.EVTOPTA9150:0 "優秀な大臣だ！"
  flavor_eng.EVTNAME9193:0 "メシュエン条約"
  flavor_eng.EVTDESC9193:0 "ジョン・メシュエンは1650年に生まれた。1703年にイングランドとポルトガルの間で締結された条約のためによく記憶されている外交官である。この条約の主な目的は、イングランドへのポルトガルワイン（ポートワイン）の自由な入荷と引き換えに、ポルトガルへのイングランドの羊毛と布の自由な導入を可能にすることであった。この条約は実質的にポルトガルをイングランドの経済的、政治的に衛星化するものであり、1836年に廃止された。ジョン・メシュエンは彼の最大の成功の直後の1706年に死亡した。"
