--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -697,10 +697,10 @@
  personality_options.5045.b:0 "政府の政策を抜本的に見直す。"
  personality_options.5051.d:0 "農民を保護するための新しい改革を導入する。"
  personality_options.6003.a:0 "小さな代表機関を設立する。"
- cuirassier_leader_personality_die_desc:1 "[GetHerHisCap] engagement for the cavalry will be missed."
+ cuirassier_leader_personality_die_desc:1 "[GetHerHisCap]の騎兵隊が戦う様が惜しまれます。"
  cruel_tactician_personality_die_desc:0 "The day of [GetHerHis] demise will be celebrated by our enemies as a holiday."
  frontline_holder_personality_die_desc:0 "[GetHerHisCap] death will not be in vain as our troops hold the line."
- strict_drillmaster_personality_die_desc:0 "May [GetHerHis] lessons inspire greatness for future generals."
+ strict_drillmaster_personality_die_desc:0 "[GetHerHis]の教えが、未来の将軍たちの偉大さを鼓舞しますように。"
  naval_strategist_personality_die_desc:0 "[GetHerHisCap] strategies on the sea saved many lives."
  inspirational_captain_personality_die_desc:0 "[GetHerHisCap] inspirational speeches will be remembered by generations of sailors."
  naval_cannoneer_personality_die_desc:0 "The sound of our cannons will never as loud as they were during [GetHerHis] leadership."
@@ -724,6 +724,6 @@
  desc_wooden_waller_personality:0 "This Admiral is a Wooden Waller. Ships commanded by this leader will be able to withstand more damages than those commanded by other captains."
  cunning_navigator_personality:0 "Cunning Navigator"
  desc_cunning_navigator_personality:0 "This Admiral is a Cunning Navigator. Ships commanded by this leader will reach their destination faster than usual."
- great_explorer_personality:0 "Great Explorer"
+ great_explorer_personality:0 "大探検家"
  great_explorer_personality_desc:0 "A legendary explorer, ready to charter unknown seas and bring prestige and splendor to our name!"
  great_explorer_personality_die_desc:0 "Alas, a great catastrophe! Magellan, our most highly esteemed and legendary navigator has embraced the afterlife. A grey and sorrowful day is upon us..."
