--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -145,7 +145,7 @@
  desc_levee_en_masse:0 "共和国が危険にさらされている場合、全ての健常な男性は、国を守るために兵役に入ることが義務付けられる。"
  professional_diplomatic_corps:0 "専門的な外交団"
  desc_professional_diplomatic_corps:0 "血縁により大使の地位を与えるのではなく、専門の外交官を雇うことで、我々は効率を得る。"
- letters_of_marque:1 "Sponsored Privateers"
+ letters_of_marque:1 "私掠船の後援"
  desc_letters_of_marque:0 "意欲的な私掠船長に私掠免許状を与えることにより、彼らは我々ができる私掠活動の量を増やすだろう。"
  the_citizen_service_act:0 "市民奉仕法"
  desc_the_citizen_service_act:0 "市民が恩恵を受けている場合、彼らは国家に対しても義務がある。奉仕が市民権を保証する！"
@@ -217,8 +217,8 @@
  desc_foreign_political_allies:0 "同盟国を持っているのは良いことであり、その同盟国が我々の利益を押し進めることで、我々は他国に対する外交的影響力を強めることができる。"
  loyal_governors:0 "忠実な総督"
  desc_loyal_governors:0 "忠誠心は最も重要な美徳であり、遠方の州の総督がまず王家に対して忠実であることを保証することによって、我々はそれらの土地の有用性を高めることができる。"
- a_rating_system:0 "評価制度"
- desc_a_rating_system:0 "大砲の数に応じて船のクラスを評価する形式の制度である。"
+ a_rating_system:0 "等級制度"
+ desc_a_rating_system:0 "大砲の数に応じて船を等級付けする形式的制度である。"
  merchant_protection_act:0 "商人保護法"
  desc_merchant_protection_act:0 "交易は世界の生命線である。我々の商人に特権と保護を与えることによって、我々は彼らが自分たちのやり方を続けることを保証することができる。"
  the_foreign_relations_act:0 "対外関係法"
@@ -329,11 +329,11 @@
  desc_the_statue_in_restraint_of_appeals:0 "我々は公式に教皇を降格させ、代わりに王をすべての宗教問題の最終権限になるよう格上げする。"
  the_licensing_of_the_press_act:0 "特許検閲法"
  desc_the_licensing_of_the_press_act:0 "我々は、社会における反逆的な出版物の量を最小限に抑えるため、印刷に関して厳しい規則と規制を採用している。"
- the_wooden_wall:0 "艦隊は我々の木の城壁だ"
+ the_wooden_wall:0 "艦隊が我々の「木の城壁」だ"
  desc_the_wooden_wall:0 "私はただ彼らが海から来ていないと言っただけであり、フランス人が来ていないなどと言ったことはない。"
  beneficial_neglect:0 "穏やかな放置"
  desc_beneficial_neglect:0 "関係を改善するため、我々の植民地には、いくつかの政治的自由が付与されている。"
- the_provincial_taxation_system:0 "地方の税制"
+ the_provincial_taxation_system:0 "地方税制"
  desc_the_provincial_taxation_system:0 "我々は自己の利益を最適化できる恒久的な地方税制を確立している。"
  foreign_conscription_centers:0 "外国での徴兵の中心地"
  desc_foreign_conscription_centers:0 "従属国の大都市に専用の徴兵施設を設置すれば、従属国の人々や資源をもっと安く利用できる。"
