--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1517,8 +1517,8 @@
  KAISERIN:0 "カイゼリン"
  opinion_supporting_pope:0 "正当な教皇への支持"
  emperor_reichsregiment_emperor:0 "帝国統治院の設置"
- emperor_gemeinerpfennig_emperor_per_prince:0 "一般帝国税を制定"
- emperor_gemeinerpfennig:0 "一般帝国税を制定"
+ emperor_gemeinerpfennig_emperor_per_prince:0 "一般帝国税の制定"
+ emperor_gemeinerpfennig:0 "一般帝国税の制定"
  emperor_perpetual_diet_emperor:0 "永続的帝国議会"
  emperor_landsknechtswesen:0 "ランツクネヒト制度の創設"
  emperor_landfriede_emperor:0 "永久ラント平和令"
@@ -3211,10 +3211,10 @@
  has_reined_in_all_italians_early:1 "全ての§Yイタリア§!の諸侯が統制されている。\n\n§Y統制§!とは§Yターゲット§!の国が以下のいずれかを満たす必要がある：\n  §Yターゲット§!の§Y[Root.GetName]§!への評価が§G150§!以上である。\n  §Y自由都市§!の政府改革を持つ。\n  §Y[Root.GetName]§!の従属国である。\n  §Yターゲット§!が§Y[Root.GetName]§!と同盟している。\n  §Y皇帝§!に戦争で敗北したことがある。"
  great_peasants_war_emperor_decision_title:0 "大農民戦争の終結"
  great_peasants_war_emperor_decision_desc:0 "大農民戦争は終わらせなければならず、この紛争の勝利者として浮かび上がるのは農民か貴族のいずれかである。農民が彼らの要求を強制するか、新しい共和国を作るとき、彼らは彼らの要求の実施へと近づく。しかし、新しい共和国が押し潰されれば、潮流は貴族に有利となる。"
- high_peasant_score_emperor_tt:1 "Peasants' War Progress must be greater than §Y9§! or less than §Y-9§!. Current progress is §Y[1.GPW_counting_variable.GetValue]§!.\n\n§YPeasants' War Progress§! can be influenced by:\n    §YPeasant Rebels§! enforcing demands on a §YHoly Roman Empire Prince§!: §R-1§!\n    §YHoly Roman Empire Prince§! changing Government Type to a §YPeasant Republic§!: §R-2§!\n    §YHoly Roman Empire Prince§! forcing a §YPeasant Republic§! to change §YGovernment Type§!: §G+3§!"
+ high_peasant_score_emperor_tt:1 "農民戦争の進捗が§Y9§!より大きいか、または§Y-9§!未満でなければなりません。現在の進捗は§Y[1.GPW_counting_variable.GetValue]§!です。\n\n§Y農民戦争の進捗§!は以下の影響を受けます：\n　§Y農民反乱軍§!が§Y神聖ローマ帝国諸侯§!に要求を強制させる：§R-1§!\n　§Y神聖ローマ帝国諸侯§!が政体を§Y農民共和国§!に変更：§R-2§!\n　§Y神聖ローマ帝国諸侯§!が§Y農民共和国§!に§Y政体§!の変更を強制させる：§G+3§!"
  great_peasants_war_peasant_decision_title:0 "農民の要求の強制"
  great_peasants_war_peasant_decision_desc:1 "貴族の圧制の下で、我々は長年苦しんでいます。農民戦争の進展は、国家が農民共和国になったとき、またはそれらが農民反乱軍の前に崩壊したときに得られます。"
- high_peasant_score__peasant_tt:1 "Peasants' War Progress must be greater than §Y9§! or less than §Y-9§!. Current progress is §Y[1.GPW_counting_variable.GetValue]§!.\n\n§YPeasants' War Progress§! can be influenced by:\n    §YPeasant Rebels§! enforcing demands on a §YHoly Roman Empire Prince§!: §G-1§!\n    §YHoly Roman Empire Prince§! changing Government Type to a §YPeasant Republic§!: §G-2§!\n    §YHoly Roman Empire Prince§! forcing a §YPeasant Republic§! to change §YGovernment Type§!: §R+3§!"
+ high_peasant_score__peasant_tt:1 "農民戦争の進捗が§Y9§!より大きいか、または§Y-9§!未満でなければなりません。現在の進捗は§Y[1.GPW_counting_variable.GetValue]§!です。\n\n§Y農民戦争の進捗§!は以下の影響を受けます：\n　§Y農民反乱軍§!が§Y神聖ローマ帝国諸侯§!に要求を強制させる：§G-1§!\n　§Y神聖ローマ帝国諸侯§!が政体を§Y農民共和国§!に変更：§G-2§!\n　§Y神聖ローマ帝国諸侯§!が§Y農民共和国§!に§Y政体§!の変更を強制させる：§R+3§!"
  passed_golden_bull_tt:0 "教皇勅書が承認される"
  medici_pope_modifier:0 "我らの教皇"
  desc_medici_pope_modifier:0 "絶え間ない計略を通じ、我々の一族の一人がローマ教皇となった。"
