--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -3327,7 +3327,7 @@
  COLONYTAKENOTHER_SETUP:0 "ある国が他国の植民地を占領したとき"
  COLONYTAKENOTHER_HEADER:0 ""
  COLONYTAKENOTHER_1:0 "$ACTOR$からの使者"
- COLONYTAKENOTHER_2:0 "$MONARCHTITLE$、$ACTOR$は$RECIPIENT$のコロニーを占領しました。"
+ COLONYTAKENOTHER_2:0 "$MONARCHTITLE$、$ACTOR$は$RECIPIENT$の植民地を占領しました。"
  COLONYTAKENOTHER_4:0 "$ACTOR$は今、$PROVINCE$の新しい統治者です！"
  COLONYTAKENOTHER_6:0 "我々は$ACTOR$に注意しなければなりません。彼らの領土野心は我々との衝突をもたらすかもしれません。"
  COLONYTAKENOTHER_LOG:0 "$ACTOR$、$PROVINCE$の$RECIPIENT$植民地を占領"
@@ -7115,15 +7115,15 @@
  OTHERJOINSOURHREDECLINE_BTN1:0 "なんてひどい！"
  OTHERJOINSOURHREDECLINE_BTN2:0 "なんてひどい！"
  OTHERJOINSOURHREDECLINE_BTN3:0 "移動"
- REMOVESEATINPARLIAMENT_TITLE:0 "Revoked Seat in Parliament"
- REMOVESEATINPARLIAMENT_SETUP:0 "When a province's seat in our Parliament is revoked."
- REMOVESEATINPARLIAMENT_HEADER:0 "Our Chancellor reports"
- REMOVESEATINPARLIAMENT_1:0 "Revoked Seat in Parliament"
- REMOVESEATINPARLIAMENT_2:0 "The people of"
- REMOVESEATINPARLIAMENT_3:0 "$PROV$"
- REMOVESEATINPARLIAMENT_4:0 "have had their seat in our parliament revoked, serving the needs of our $GOV$."
- REMOVESEATINPARLIAMENT_LOG:0 "$PROV$ no longer have a seat in parliament."
+ REMOVESEATINPARLIAMENT_TITLE:0 "議席はく奪"
+ REMOVESEATINPARLIAMENT_SETUP:0 "州が議席をはく奪された時"
+ REMOVESEATINPARLIAMENT_HEADER:0 "宰相からの報告"
+ REMOVESEATINPARLIAMENT_1:0 "議席がはく奪されました"
+ REMOVESEATINPARLIAMENT_2:0 "$PROV$の"
+ REMOVESEATINPARLIAMENT_3:0 "$GOV$の要求に応えていた人々の"
+ REMOVESEATINPARLIAMENT_4:0 "議席がはく奪されました。"
+ REMOVESEATINPARLIAMENT_LOG:0 "$PROV$、議会に席を無くす"
  REMOVESEATINPARLIAMENT_BTN1:0 "OK"
  REMOVESEATINPARLIAMENT_BTN2:0 "OK"
  REMOVESEATINPARLIAMENT_BTN3:0 "移動"
- REMOVESEATINPARLIAMENT_MAP:0 "Revoked Seat in Parliament"
+ REMOVESEATINPARLIAMENT_MAP:0 "議席はく奪"
