--- a/source/localisation/other_scripted_effect_l_english.yml
+++ b/source/localisation/other_scripted_effect_l_english.yml
@@ -1,13 +1,13 @@
 ﻿l_english:
- add_or_upgrade_trade_building_tt:0 "§Y[This.GetName]§! gets their §YTrade Building§! upgraded. If no building is present, add §YMarketplace§!, and if §YStock Exchange§! is, gain §G1§! Base Tax and §G1§! Base Production in §Y[This.GetName]§!."
- add_or_upgrade_tax_building_tt:0 "§Y[This.GetName]§! gets their §YTax Building§! upgraded. If no building is present, add §YTemple§!, and if §YCathedral§! is, gain §G2§! Base Tax in §Y[This.GetName]§!."
- add_or_upgrade_production_building_tt:0 "§Y[This.GetName]§! gets their §YProduction Building§! upgraded. If no building is present, add §YWorkshop§!, and if §YCounting House§! is, gain §G2§! Base Production in §Y[This.GetName]§!."
- add_or_upgrade_dock_building_tt:0 "§Y[This.GetName]§! gets their §YDock Building§! upgraded. If no building is present, add §YDocks§!, and if §YDrydocks§! is, gain §G500§! Sailors."
- add_or_upgrade_shipyard_building_tt:0 "§Y[This.GetName]§! gets their §YShipyard Building§! upgraded. If no building is present, add §YShipyard§!, and if §YGrand Shipyard§! is, gain §G500§! Sailors."
- add_or_upgrade_manpower_building_tt:0 "§Y[This.GetName]§! gets their §YManpower Building§! upgraded. If no building is present, add §YBarracks§!, and if §YTraining Fields§! is, gain §G1§! Base Production and §G1§! Base Manpower in §Y[This.GetName]§!."
- add_or_upgrade_forcelimit_building_tt:0 "§Y[This.GetName]§! gets their §YForcelimit Building§! upgraded. If no building is present, add §YRegimental Camp§!, and if §YConscription Center§! is, gain §G2§! Base Manpower in §Y[This.GetName]§!."
- add_or_upgrade_university_building_tt:0 "If §YUniversity§! isn't present, add §YUniversity§!, and if it is, gain §G1§! Base Tax, §G1§! Base Production and §G1§! Base Manpower in §Y[This.GetName]§!."
- add_or_upgrade_courthouse_building_tt:0 "§Y[This.GetName]§! gets their §YCourthouse Building§! upgraded. If no building is present, add §YCourthouse§!, and if §YTown Hall§! is, gain §G1§! Base Tax, §G1§! Base Production and §G1§! Base Manpower in §Y[This.GetName]§!."
- add_or_upgrade_fort_building_tt:0 "§Y[This.GetName]§! gets their §YFort Building§! upgraded. If no building is present, add §YCastle§!, and if §YFortress§! is, gain §G3§! Base Manpower in §Y[This.GetName]§!."
+ add_or_upgrade_trade_building_tt:0 "§Y[This.GetName]§!の§Y交易施設§!がアップグレードされます。施設がない場合は、§Y市場§!が追加され、§Y証券取引所§!がある場合は、§Y[This.GetName]§!の基本税が§G1§!、基本生産が§G1§!増えます。"
+ add_or_upgrade_tax_building_tt:0 "§Y[This.GetName]§!の§Y税施設§!がアップグレードされます。施設がない場合は、§Y寺院§!が追加され、§Y大聖堂§!がある場合は、§Y[This.GetName]§!の基本税が§G2§!増えます。"
+ add_or_upgrade_production_building_tt:0 "§Y[This.GetName]§!の§Y生産施設§!がアップグレードされます。施設がない場合は、§Y工房§!が追加され、§Y会計所§!がある場合は、§Y[This.GetName]§!の基本生産が§G2§!増えます。"
+ add_or_upgrade_dock_building_tt:0 "§Y[This.GetName]§!の§Yドック施設§!がアップグレードされます。施設がない場合は、§Yドック§!が追加され、§Y乾ドック§!がある場合は、水兵が§G500§!増えます。"
+ add_or_upgrade_shipyard_building_tt:0 "§Y[This.GetName]§!の§Y造船施設§!がアップグレードされます。施設がない場合は、§Y造船所§!が追加され、§Y大造船所§!がある場合は、水兵が§G500§!増えます。"
+ add_or_upgrade_manpower_building_tt:0 "§Y[This.GetName]§!の§Y人的施設§!がアップグレードされます。施設がない場合は、§Y兵舎§!が追加され、§Y訓練場§!がある場合は、§Y[This.GetName]§!の基本生産が§G1§!、基本人的資源が§G1§!増えます。"
+ add_or_upgrade_forcelimit_building_tt:0 "§Y[This.GetName]§!の§Y不要限界施設§!がアップグレードされます。施設がない場合は、§Y連隊兵舎§!が追加され、§Y徴兵所§!がある場合は、§Y[This.GetName]§!の基本人的資源が§G2§!増えます。"
+ add_or_upgrade_university_building_tt:0 "§Y大学§!がない場合は、§Y大学§!が追加され、ある場合は、§Y[This.GetName]§!の基本生産が§G1§!、基本人的資源が§G1§!、基本人的資源が§G1§!増えます。"
+ add_or_upgrade_courthouse_building_tt:0 "§Y[This.GetName]§!の§Y裁判施設§!がアップグレードされます。施設がない場合は、§Y裁判所§!が追加され、§Y役所§!がある場合は、§Y[This.GetName]§!の基本税が§G1§!、基本生産が§G1§!、基本人的資源が§G1§!増えます。"
+ add_or_upgrade_fort_building_tt:0 "§Y[This.GetName]§!の§Y要塞施設§!がアップグレードされます。施設がない場合は、§Y城§!が追加され、§Y要塞都市§!がある場合は、§Y[This.GetName]§!の基本人的資源が§G3§!増えます。"
  ME_yes:0 "£yes£"
  ME_no:0 "£no£"
